config : restore all config /defconfig after last merge

--- a/config/defconfigs/geexbox-xbmc-imx5x-efikamx.conf
+++ b/config/defconfigs/geexbox-xbmc-imx5x-efikamx.conf
@@ -1,22 +1,21 @@
 #
 # Automatically generated make config: don't edit
 #
-CONFIG_KERNELVERSION="devel-20111007-r13233"
+CONFIG_KERNELVERSION="devel-20111012-r13293"
 CONFIG_MODULES=y
 # CONFIG_FLAVOUR_base is not set
 CONFIG_FLAVOUR_geexbox=y
 # CONFIG_FLAVOUR_test is not set
 CONFIG_OPT_FLAVOUR="geexbox"
 # CONFIG_FRONTEND_enna is not set
-# CONFIG_FRONTEND_xbmc is not set
-CONFIG_FRONTEND_xbmc-pvr=y
+CONFIG_FRONTEND_xbmc=y
 # CONFIG_FRONTEND_boxee is not set
 # CONFIG_FRONTEND_qtmediahub is not set
 # CONFIG_FRONTEND_freevo is not set
 # CONFIG_FRONTEND_mythtv is not set
 # CONFIG_FRONTEND_showtime is not set
 # CONFIG_FRONTEND_vdr is not set
-CONFIG_OPT_MEDIA_CENTER_FRONTEND="xbmc-pvr"
+CONFIG_OPT_MEDIA_CENTER_FRONTEND="xbmc"
 CONFIG_OPT_DISTRONAME="GeeXboX"
 
 #
@@ -43,10 +42,10 @@ CONFIG_TARGET_SUBARCH_armv7=y
 # CONFIG_TARGET_SUBARCH_x86_64 is not set
 CONFIG_OPT_TARGET_SUBARCH="armv7"
 # CONFIG_TARGET_PLATFORM_arm_bcmring is not set
-# CONFIG_TARGET_PLATFORM_arm_imx5x is not set
+CONFIG_TARGET_PLATFORM_arm_imx5x=y
 # CONFIG_TARGET_PLATFORM_arm_kirkwood is not set
 # CONFIG_TARGET_PLATFORM_arm_omap3 is not set
-CONFIG_TARGET_PLATFORM_arm_omap4=y
+# CONFIG_TARGET_PLATFORM_arm_omap4 is not set
 # CONFIG_TARGET_PLATFORM_arm_s3c24xx is not set
 # CONFIG_TARGET_PLATFORM_arm_tegra2 is not set
 # CONFIG_TARGET_PLATFORM_arm_ux500 is not set
@@ -57,9 +56,11 @@ CONFIG_TARGET_PLATFORM_arm_omap4=y
 # CONFIG_TARGET_PLATFORM_powerpc64_generic is not set
 # CONFIG_TARGET_PLATFORM_x86_64_generic is not set
 # CONFIG_TARGET_PLATFORM_x86_64_ion is not set
-CONFIG_OPT_TARGET_PLATFORM="omap4"
+CONFIG_OPT_TARGET_PLATFORM="imx5x"
 # CONFIG_TARGET_MACHINE_arm_bcmring_bcm11107 is not set
-# CONFIG_TARGET_MACHINE_arm_imx5x_efikamx is not set
+CONFIG_TARGET_MACHINE_arm_imx5x_efikamx=y
+# CONFIG_TARGET_MACHINE_arm_imx5x_mx51-evk is not set
+# CONFIG_TARGET_MACHINE_arm_imx5x_mx53-evk is not set
 # CONFIG_TARGET_MACHINE_arm_kirkwood_sheevaplug is not set
 # CONFIG_TARGET_MACHINE_arm_omap3_beagleboard is not set
 # CONFIG_TARGET_MACHINE_arm_omap3_beagleboard-xm is not set
@@ -69,7 +70,7 @@ CONFIG_OPT_TARGET_PLATFORM="omap4"
 # CONFIG_TARGET_MACHINE_arm_omap3_tao3530 is not set
 # CONFIG_TARGET_MACHINE_arm_omap3_touchbook is not set
 # CONFIG_TARGET_MACHINE_arm_omap3_zoom2 is not set
-CONFIG_TARGET_MACHINE_arm_omap4_pandaboard=y
+# CONFIG_TARGET_MACHINE_arm_omap4_pandaboard is not set
 # CONFIG_TARGET_MACHINE_arm_s3c24xx_gta01 is not set
 # CONFIG_TARGET_MACHINE_arm_s3c24xx_gta02 is not set
 # CONFIG_TARGET_MACHINE_arm_tegra2_harmony is not set
@@ -84,7 +85,7 @@ CONFIG_TARGET_MACHINE_arm_omap4_pandaboard=y
 # CONFIG_TARGET_MACHINE_x86_64_generic_generic is not set
 # CONFIG_TARGET_MACHINE_x86_64_generic_vmware is not set
 # CONFIG_TARGET_MACHINE_x86_64_ion_kbb is not set
-CONFIG_OPT_TARGET_MACHINE="pandaboard"
+CONFIG_OPT_TARGET_MACHINE="efikamx"
 # CONFIG_TARGET_CPU_arm9tdmi is not set
 # CONFIG_TARGET_CPU_arm920t is not set
 # CONFIG_TARGET_CPU_arm922t is not set
@@ -217,10 +218,6 @@ CONFIG_TARGET_CPU_cortex-a9=y
 # CONFIG_TARGET_CPU_rsc is not set
 # CONFIG_TARGET_CPU_rs64 is not set
 CONFIG_OPT_TARGET_CPU="cortex-a9"
-CONFIG_OMAP_DISPLAY_HDMI=y
-# CONFIG_OMAP_DISPLAY_DVI is not set
-# CONFIG_OMAP_DISPLAY_DSI is not set
-# CONFIG_OMAP_DISPLAY_DPI is not set
 # CONFIG_FPU_OPTIMIZATIONS_VFP2 is not set
 # CONFIG_FPU_OPTIMIZATIONS_VFP3 is not set
 CONFIG_FPU_OPTIMIZATIONS_NEON=y
@@ -238,6 +235,7 @@ CONFIG_FPU_OPTIMIZATIONS_NEON=y
 # CONFIG_TOOLCHAIN_codesourcery is not set
 CONFIG_TOOLCHAIN_linaro=y
 CONFIG_TARGET_LIBC_eglibc=y
+# CONFIG_TARGET_LIBC_glibc is not set
 # CONFIG_TARGET_LIBC_uclibc is not set
 CONFIG_OPT_TOOLCHAIN_CXX=y
 CONFIG_OPT_TOOLCHAIN_GRAPHITE=y
@@ -269,7 +267,6 @@ CONFIG_OPT_CONCURRENCY_MAKE_LEVEL=3
 # CONFIG_OPT_TARGET_ISO is not set
 CONFIG_OPT_TARGET_FLAT=y
 # CONFIG_OPT_TARGET_PXE is not set
-# CONFIG_OPT_TARGET_OMAP_TARBALL is not set
 # CONFIG_OPT_TARGET_TARBALL is not set
 # CONFIG_OPT_TARGET_EXT2FS is not set
 # CONFIG_OPT_TARGET_INITRAMFS is not set
@@ -308,23 +305,22 @@ CONFIG_USE_xorg=y
 # Hardware Accelerators
 #
 # CONFIG_USE_crystalhd is not set
-# CONFIG_USE_ducati is not set
 CONFIG_USE_egl=y
 # CONFIG_USE_opengl is not set
 CONFIG_USE_opengles=y
 # CONFIG_USE_openmax is not set
 CONFIG_USE_openvg=y
 # CONFIG_USE_vaapi is not set
-# CONFIG_EGL_PROVIDER_MESA is not set
-CONFIG_EGL_PROVIDER_SGX=y
+CONFIG_EGL_PROVIDER_MESA=y
+# CONFIG_EGL_PROVIDER_SGX is not set
 # CONFIG_EGL_PROVIDER_TEGRA is not set
 # CONFIG_EGL_PROVIDER_IMX is not set
-# CONFIG_GLES_PROVIDER_MESA is not set
-CONFIG_GLES_PROVIDER_SGX=y
+CONFIG_GLES_PROVIDER_MESA=y
+# CONFIG_GLES_PROVIDER_SGX is not set
 # CONFIG_GLES_PROVIDER_TEGRA is not set
 # CONFIG_GLES_PROVIDER_IMX is not set
-# CONFIG_OVG_PROVIDER_MESA is not set
-CONFIG_OVG_PROVIDER_SGX=y
+CONFIG_OVG_PROVIDER_MESA=y
+# CONFIG_OVG_PROVIDER_SGX is not set
 # CONFIG_OVG_PROVIDER_IMX is not set
 
 #
@@ -445,7 +441,7 @@ CONFIG_PKG_ntfs-3g=y
 # CONFIG_PKG_bluez-firmware is not set
 # CONFIG_PKG_brcm80211-firmware is not set
 # CONFIG_PKG_extra-firmwares-nonfree is not set
-# CONFIG_PKG_imx-firmware is not set
+CONFIG_PKG_imx-firmware=y
 # CONFIG_PKG_ipw2100-firmware is not set
 # CONFIG_PKG_ipw2200-firmware is not set
 # CONFIG_PKG_iwlwifi-100-ucode is not set
@@ -506,7 +502,7 @@ CONFIG_PKG_SDL-mixer=y
 # CONFIG_PKG_SDL-ttf is not set
 # CONFIG_PKG_WebKitSDL is not set
 # CONFIG_PKG_a52dec is not set
-# CONFIG_PKG_acl is not set
+CONFIG_PKG_acl=y
 # CONFIG_PKG_atk is not set
 CONFIG_PKG_attr=y
 CONFIG_PKG_avahi=y
@@ -541,7 +537,7 @@ CONFIG_PKG_enca=y
 # CONFIG_PKG_ethumb is not set
 # CONFIG_PKG_evas is not set
 CONFIG_PKG_expat=y
-# CONFIG_PKG_faac is not set
+CONFIG_PKG_faac=y
 CONFIG_PKG_faad2=y
 # CONFIG_PKG_farsight is not set
 # CONFIG_PKG_fftw is not set
@@ -571,7 +567,7 @@ CONFIG_PKG_i18n=y
 # CONFIG_PKG_icu4c is not set
 # CONFIG_PKG_imlib2 is not set
 # CONFIG_PKG_imx-graphics is not set
-# CONFIG_PKG_imx-lib is not set
+CONFIG_PKG_imx-lib=y
 CONFIG_PKG_jasper=y
 CONFIG_PKG_jpeg=y
 # CONFIG_PKG_json-glib is not set
@@ -588,6 +584,7 @@ CONFIG_PKG_libcap=y
 # CONFIG_PKG_libcdaudio is not set
 # CONFIG_PKG_libcddb is not set
 CONFIG_PKG_libcdio=y
+# CONFIG_PKG_libcec is not set
 # CONFIG_PKG_libcroco is not set
 CONFIG_PKG_libdaemon=y
 # CONFIG_PKG_libdce is not set
@@ -620,7 +617,7 @@ CONFIG_PKG_libogg=y
 # CONFIG_PKG_liboil is not set
 # CONFIG_PKG_libpcap is not set
 # CONFIG_PKG_libpcd is not set
-CONFIG_PKG_libplist=y
+# CONFIG_PKG_libplist is not set
 CONFIG_PKG_libpng=y
 # CONFIG_PKG_libpng12 is not set
 # CONFIG_PKG_libpurple is not set
@@ -646,7 +643,7 @@ CONFIG_PKG_libvorbis=y
 CONFIG_PKG_libxml2=y
 # CONFIG_PKG_libxslt is not set
 # CONFIG_PKG_libyaml is not set
-# CONFIG_PKG_libz160 is not set
+CONFIG_PKG_libz160=y
 CONFIG_PKG_lzo=y
 CONFIG_PKG_mesa=y
 # CONFIG_OPT_mesa_gallium3d is not set
@@ -656,7 +653,7 @@ CONFIG_PKG_mesa=y
 # CONFIG_PKG_mx is not set
 # CONFIG_PKG_ncurses is not set
 # CONFIG_PKG_ncursesw is not set
-CONFIG_PKG_openssl=y
+# CONFIG_PKG_openssl is not set
 # CONFIG_PKG_orc is not set
 # CONFIG_PKG_pango is not set
 CONFIG_PKG_pciids=y
@@ -696,7 +693,7 @@ CONFIG_PKG_tiff=y
 # CONFIG_PKG_twolame is not set
 # CONFIG_PKG_v4l-utils is not set
 CONFIG_PKG_wavpack=y
-CONFIG_PKG_yajl=y
+# CONFIG_PKG_yajl is not set
 CONFIG_PKG_zlib=y
 # CONFIG_PKG_zvbi is not set
 
@@ -761,8 +758,7 @@ CONFIG_OPT_sgx540OpenGLES_xorg=y
 # CONFIG_PKG_ti-dsp is not set
 # CONFIG_PKG_ti-omap3-omxil is not set
 # CONFIG_PKG_ti-omap4-domx is not set
-CONFIG_PKG_tvheadend=y
-# CONFIG_OPT_tvheadend_zeroconf is not set
+# CONFIG_PKG_tvheadend is not set
 # CONFIG_PKG_vdr is not set
 # CONFIG_PKG_vdr-avards is not set
 # CONFIG_PKG_vdr-devstatus is not set
@@ -808,24 +804,23 @@ CONFIG_PKG_tvheadend=y
 # CONFIG_PKG_vdr-xineliboutput is not set
 # CONFIG_PKG_vdr-zaphistory is not set
 # CONFIG_PKG_vlc is not set
-# CONFIG_PKG_xbmc is not set
-CONFIG_PKG_xbmc-pvr=y
-# CONFIG_OPT_xbmcpvr_opengl is not set
-CONFIG_OPT_xbmcpvr_opengles=y
-# CONFIG_OPT_xbmcpvr_openmax is not set
-CONFIG_OPT_xbmcpvr_joystick=y
-CONFIG_OPT_xbmcpvr_zeroconf=y
-CONFIG_OPT_xbmcpvr_webserver=y
-# CONFIG_OPT_xbmcpvr_vaapi is not set
-# CONFIG_OPT_xbmcpvr_crystalhd is not set
-# CONFIG_OPT_xbmcpvr_pulseaudio is not set
-CONFIG_OPT_xbmcpvr_dvdcss=y
-CONFIG_OPT_xbmcpvr_bluray=y
-CONFIG_OPT_xbmcpvr_rtmp=y
-CONFIG_OPT_xbmcpvr_nonfree=y
-# CONFIG_OPT_xbmcpvr_externalffmpeg is not set
-CONFIG_OPT_xbmcpvr_tvheadend=y
-CONFIG_OPT_xbmcpvr_addons=y
+CONFIG_PKG_xbmc=y
+# CONFIG_OPT_xbmc_opengl is not set
+CONFIG_OPT_xbmc_opengles=y
+# CONFIG_OPT_xbmc_openmax is not set
+CONFIG_OPT_xbmc_joystick=y
+CONFIG_OPT_xbmc_faac=y
+CONFIG_OPT_xbmc_zeroconf=y
+CONFIG_OPT_xbmc_webserver=y
+# CONFIG_OPT_xbmc_vaapi is not set
+# CONFIG_OPT_xbmc_crystalhd is not set
+# CONFIG_OPT_xbmc_pulseaudio is not set
+CONFIG_OPT_xbmc_dvdcss=y
+CONFIG_OPT_xbmc_bluray=y
+CONFIG_OPT_xbmc_rtmp=y
+CONFIG_OPT_xbmc_nonfree=y
+# CONFIG_OPT_xbmc_externalffmpeg is not set
+CONFIG_OPT_xbmc_addons=y
 # CONFIG_PKG_xine-bluray is not set
 # CONFIG_PKG_xine-lib is not set
 # CONFIG_PKG_xine-ui is not set
@@ -992,12 +987,15 @@ CONFIG_PKG_eglibc=y
 # CONFIG_OPT_eglibc_ipv6 is not set
 # CONFIG_OPT_eglibc_timezone is not set
 CONFIG_PKG_eglibc-gconv=y
-# CONFIG_OPT_eglibcgconv_minimal is not set
+CONFIG_OPT_eglibcgconv_minimal=y
 # CONFIG_PKG_eglibc-gdb is not set
 CONFIG_PKG_eglibc-network=y
 # CONFIG_PKG_evtest is not set
 # CONFIG_PKG_freevo-config is not set
 # CONFIG_PKG_gcc-final is not set
+# CONFIG_PKG_glibc is not set
+# CONFIG_PKG_glibc-gdb is not set
+# CONFIG_PKG_glibc-network is not set
 CONFIG_PKG_i18n-keymaps=y
 CONFIG_PKG_i18n-locales=y
 CONFIG_PKG_linux=y
@@ -1112,7 +1110,7 @@ CONFIG_PKG_xf86-input-evdev=y
 # CONFIG_PKG_xf86-video-ati is not set
 CONFIG_PKG_xf86-video-fbdev=y
 # CONFIG_PKG_xf86-video-glamo is not set
-# CONFIG_PKG_xf86-video-imx is not set
+CONFIG_PKG_xf86-video-imx=y
 # CONFIG_PKG_xf86-video-mach64 is not set
 # CONFIG_PKG_xf86-video-mga is not set
 # CONFIG_PKG_xf86-video-nouveau is not set
@@ -1128,12 +1126,11 @@ CONFIG_PKG_xorg-server=y
 CONFIG_PKG_xrandr=y
 CONFIG_PKG_xvinfo=y
 CONFIG_OPT_OPTIMIZATIONS="speed"
-CONFIG_OPT_OMAP_DISPLAY="hdmi"
 CONFIG_OPT_FPU_OPTIMIZATIONS="neon"
 CONFIG_OPT_TOOLCHAIN_TYPE="linaro"
 CONFIG_OPT_COMPRESSION_METHOD="gzip"
 CONFIG_OPT_TARGET_LIBC="eglibc"
 CONFIG_OPT_KEYMAP="qwerty"
-CONFIG_OPT_EGL_PROVIDER="sgx"
-CONFIG_OPT_GLES_PROVIDER="sgx"
-CONFIG_OPT_OVG_PROVIDER="sgx"
+CONFIG_OPT_EGL_PROVIDER="mesa"
+CONFIG_OPT_GLES_PROVIDER="mesa"
+CONFIG_OPT_OVG_PROVIDER="mesa"
