--- a/config/platforms/arm/imx5x/machines/mx53-evk/linux.conf
+++ b/config/platforms/arm/imx5x/machines/mx53-evk/linux.conf
@@ -245,16 +245,16 @@ CONFIG_ARCH_MXC=y
 # CONFIG_GPIO_PCA953X is not set
 # CONFIG_KEYBOARD_GPIO_POLLED is not set
 CONFIG_IMX_HAVE_PLATFORM_FEC=y
-CONFIG_IMX_HAVE_PLATFORM_GPIO_KEYS=y
 CONFIG_IMX_HAVE_PLATFORM_IMX2_WDT=y
-CONFIG_IMX_HAVE_PLATFORM_IMX_SRTC=y
 CONFIG_IMX_HAVE_PLATFORM_IMX_I2C=y
 CONFIG_IMX_HAVE_PLATFORM_IMX_UART=y
 CONFIG_IMX_HAVE_PLATFORM_IMX_IPUV3=y
 CONFIG_IMX_HAVE_PLATFORM_IMX_TVE=y
+CONFIG_IMX_HAVE_PLATFORM_LDB=y
 CONFIG_IMX_HAVE_PLATFORM_SDHCI_ESDHC_IMX=y
 CONFIG_IMX_HAVE_PLATFORM_SPI_IMX=y
 CONFIG_IMX_HAVE_PLATFORM_IMX_IIM=y
+CONFIG_IMX_HAVE_PLATFORM_AHCI=y
 CONFIG_IMX_HAVE_PLATFORM_IMX_VPU=y
 CONFIG_IMX_HAVE_PLATFORM_IMX_SPDIF=y
 
@@ -266,7 +266,7 @@ CONFIG_IMX_HAVE_PLATFORM_IMX_SPDIF=y
 # CONFIG_ARCH_MX25 is not set
 # CONFIG_ARCH_MX3 is not set
 CONFIG_ARCH_MX5=y
-CONFIG_SOC_IMX51=y
+CONFIG_SOC_IMX53=y
 
 #
 # i.MX50 machines:
@@ -275,21 +275,21 @@ CONFIG_SOC_IMX51=y
 #
 # i.MX51 machines:
 #
-CONFIG_MACH_MX51_BABBAGE=y
+# CONFIG_MACH_MX51_BABBAGE is not set
 # CONFIG_MACH_MX51_3DS is not set
 # CONFIG_MACH_EUKREA_CPUIMX51 is not set
 # CONFIG_MACH_EUKREA_CPUIMX51SD is not set
-CONFIG_MX51_EFIKA_COMMON=y
-CONFIG_MACH_MX51_EFIKAMX=y
-CONFIG_MACH_MX51_EFIKASB=y
+# CONFIG_MACH_MX51_EFIKAMX is not set
+# CONFIG_MACH_MX51_EFIKASB is not set
 
 #
 # i.MX53 machines:
 #
-# CONFIG_MACH_MX53_EVK is not set
+CONFIG_MACH_MX53_EVK=y
 # CONFIG_MACH_MX53_SMD is not set
 # CONFIG_MACH_MX53_LOCO is not set
 # CONFIG_MACH_MX53_ARD is not set
+CONFIG_UTMI_MXC=y
 # CONFIG_MXC_IRQ_PRIOR is not set
 CONFIG_MXC_TZIC=y
 CONFIG_MXC_PWM=y
@@ -1310,7 +1310,6 @@ CONFIG_SND_SOC_AC97_BUS=y
 CONFIG_SND_IMX_SOC=m
 CONFIG_SND_MXC_SOC_MX2=m
 CONFIG_SND_MXC_SOC_SPDIF_DAI=m
-# CONFIG_SND_SOC_IMX_SGTL5000 is not set
 CONFIG_SND_SOC_IMX_SPDIF=m
 CONFIG_SND_SOC_I2C_AND_SPI=y
 CONFIG_SND_SOC_ALL_CODECS=m
