--- a/config/defconfigs/geexbox-xbmc-tegra2-harmony.conf
+++ b/config/defconfigs/geexbox-xbmc-tegra2-harmony.conf
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 #
-CONFIG_KERNELVERSION="2.0.1"
+CONFIG_KERNELVERSION="devel-20110815-r12942"
 CONFIG_MODULES=y
 # CONFIG_FLAVOUR_base is not set
 CONFIG_FLAVOUR_geexbox=y
@@ -9,7 +9,6 @@ CONFIG_FLAVOUR_geexbox=y
 CONFIG_OPT_FLAVOUR="geexbox"
 # CONFIG_FRONTEND_enna is not set
 CONFIG_FRONTEND_xbmc=y
-# CONFIG_FRONTEND_xbmc-pvr is not set
 # CONFIG_FRONTEND_boxee is not set
 # CONFIG_FRONTEND_qtmediahub is not set
 # CONFIG_FRONTEND_freevo is not set
@@ -253,7 +252,6 @@ CONFIG_COMPRESSION_GZIP=y
 CONFIG_OPT_VERBOSE=y
 CONFIG_OPT_CONCURRENCY_MAKE_LEVEL=3
 # CONFIG_OPT_MIRROR is not set
-# CONFIG_OPT_REPO is not set
 
 #
 # Settings
@@ -394,7 +392,6 @@ CONFIG_AUTOMOUNTER_NFS=y
 CONFIG_PKG_opkg=y
 # CONFIG_PKG_pcmciautils is not set
 # CONFIG_PKG_plymouth-lite is not set
-# CONFIG_PKG_rpm is not set
 
 #
 # drivers
@@ -434,27 +431,11 @@ CONFIG_PKG_ntfs-3g=y
 # CONFIG_PKG_b43-lpphy-firmware is not set
 # CONFIG_PKG_b43legacy-firmware is not set
 # CONFIG_PKG_bluez-firmware is not set
-# CONFIG_PKG_brcm80211-firmware is not set
 # CONFIG_PKG_extra-firmwares-nonfree is not set
 # CONFIG_PKG_imx-firmware is not set
-# CONFIG_PKG_ipw2100-firmware is not set
-# CONFIG_PKG_ipw2200-firmware is not set
-# CONFIG_PKG_iwlwifi-100-ucode is not set
-# CONFIG_PKG_iwlwifi-1000-ucode is not set
-# CONFIG_PKG_iwlwifi-3945-ucode is not set
-# CONFIG_PKG_iwlwifi-4965-ucode is not set
-# CONFIG_PKG_iwlwifi-5000-ucode is not set
-# CONFIG_PKG_iwlwifi-5150-ucode is not set
-# CONFIG_PKG_iwlwifi-6000-ucode is not set
-# CONFIG_PKG_iwlwifi-6005-ucode is not set
-# CONFIG_PKG_iwlwifi-6030-ucode is not set
-# CONFIG_PKG_iwlwifi-6050-ucode is not set
-# CONFIG_PKG_libertas-firmware is not set
 # CONFIG_PKG_nouveau-firmware is not set
-# CONFIG_PKG_radeon-firmware is not set
 # CONFIG_PKG_syslink-ipc-firmware is not set
 # CONFIG_PKG_syslink-mm-firmware is not set
-# CONFIG_PKG_ti-connectivity-firmware is not set
 # CONFIG_PKG_tibtfm-wl1271-firmware is not set
 # CONFIG_PKG_zd1201-firmware is not set
 # CONFIG_PKG_zd1211-firmware is not set
@@ -502,7 +483,6 @@ CONFIG_PKG_attr=y
 CONFIG_PKG_avahi=y
 # CONFIG_OPT_avahi_qt is not set
 # CONFIG_PKG_bc is not set
-# CONFIG_PKG_beecrypt is not set
 CONFIG_PKG_boost=y
 # CONFIG_OPT_boost_icu is not set
 CONFIG_PKG_bzip2=y
@@ -510,7 +490,6 @@ CONFIG_PKG_bzip2=y
 # CONFIG_PKG_cdparanoia is not set
 CONFIG_PKG_curl=y
 # CONFIG_PKG_cxxtools is not set
-# CONFIG_PKG_db is not set
 # CONFIG_PKG_db47 is not set
 CONFIG_PKG_dbus-glib=y
 # CONFIG_PKG_disko is not set
@@ -587,7 +566,6 @@ CONFIG_PKG_libgcrypt=y
 CONFIG_PKG_libgpg-error=y
 # CONFIG_PKG_libiconv is not set
 # CONFIG_PKG_libiec61883 is not set
-# CONFIG_PKG_libjpeg-turbo is not set
 CONFIG_PKG_libmad=y
 CONFIG_PKG_libmicrohttpd=y
 CONFIG_PKG_libmms=y
@@ -625,7 +603,6 @@ CONFIG_PKG_libusb=y
 CONFIG_PKG_libusb-compat=y
 # CONFIG_PKG_libvisual is not set
 CONFIG_PKG_libvorbis=y
-# CONFIG_PKG_libxdg-basedir is not set
 # CONFIG_PKG_libxml is not set
 CONFIG_PKG_libxml2=y
 # CONFIG_PKG_libxslt is not set
@@ -644,7 +621,6 @@ CONFIG_PKG_mesa=y
 # CONFIG_PKG_pango is not set
 CONFIG_PKG_pciids=y
 CONFIG_PKG_pcre=y
-# CONFIG_PKG_pjsip is not set
 # CONFIG_PKG_pkcs11-helper is not set
 # CONFIG_PKG_qt is not set
 # CONFIG_PKG_qt-mobility is not set
@@ -683,15 +659,6 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_zvbi is not set
 
 #
-# misc
-#
-# CONFIG_PKG_elfutils is not set
-# CONFIG_PKG_glmark2 is not set
-# CONFIG_PKG_powerdebug is not set
-# CONFIG_PKG_powertop is not set
-# CONFIG_PKG_uci is not set
-
-#
 # multimedia
 #
 # CONFIG_PKG_GStreamer is not set
@@ -700,7 +667,6 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_enna is not set
 # CONFIG_PKG_ffmpeg is not set
 # CONFIG_PKG_freevo is not set
-# CONFIG_PKG_freevo-svn is not set
 # CONFIG_PKG_gst-bcmdec is not set
 # CONFIG_PKG_gst-convenience is not set
 # CONFIG_PKG_gst-dsp is not set
@@ -723,7 +689,6 @@ CONFIG_OPT_libbluray_aacs=y
 # CONFIG_PKG_libsvdrp is not set
 # CONFIG_PKG_libva is not set
 # CONFIG_PKG_libva-vdpau is not set
-# CONFIG_PKG_libva-xvba is not set
 # CONFIG_PKG_libvalhalla is not set
 # CONFIG_PKG_libvdpau is not set
 # CONFIG_PKG_livepause is not set
@@ -802,8 +767,6 @@ CONFIG_OPT_xbmc_bluray=y
 CONFIG_OPT_xbmc_rtmp=y
 CONFIG_OPT_xbmc_nonfree=y
 # CONFIG_OPT_xbmc_externalffmpeg is not set
-CONFIG_OPT_xbmc_addons=y
-# CONFIG_PKG_xbmc-pvr is not set
 # CONFIG_PKG_xine-bluray is not set
 # CONFIG_PKG_xine-lib is not set
 # CONFIG_PKG_xine-ui is not set
@@ -921,13 +884,11 @@ CONFIG_PKG_Python=y
 # CONFIG_PKG_kaa-display is not set
 # CONFIG_PKG_kaa-imlib2 is not set
 # CONFIG_PKG_kaa-metadata is not set
-# CONFIG_PKG_kaa-svn is not set
 # CONFIG_PKG_mysql-python is not set
 # CONFIG_PKG_pygame is not set
 # CONFIG_PKG_python-beautifulsoup is not set
 # CONFIG_PKG_python-decorator is not set
 # CONFIG_PKG_python-formencode is not set
-# CONFIG_PKG_python-gdata-client is not set
 # CONFIG_PKG_python-gobject is not set
 # CONFIG_PKG_python-lxml is not set
 # CONFIG_PKG_python-numeric is not set
@@ -968,7 +929,6 @@ CONFIG_OPT_dbus_xorg=y
 CONFIG_PKG_eglibc=y
 # CONFIG_OPT_eglibc_devtools is not set
 # CONFIG_OPT_eglibc_ipv6 is not set
-# CONFIG_OPT_eglibc_timezone is not set
 CONFIG_PKG_eglibc-gconv=y
 CONFIG_OPT_eglibcgconv_minimal=y
 # CONFIG_PKG_eglibc-gdb is not set
@@ -1040,13 +1000,10 @@ CONFIG_OPT_usbutils_devtools=y
 # CONFIG_PKG_vdpauinfo is not set
 # CONFIG_PKG_wget is not set
 # CONFIG_PKG_wscan is not set
-CONFIG_PKG_xbmc-addon-geexbox-network=y
-CONFIG_PKG_xbmc-addon-geexbox-updater=y
 
 #
 # x11
 #
-CONFIG_PKG_glew=y
 CONFIG_PKG_libICE=y
 CONFIG_PKG_libSM=y
 CONFIG_PKG_libX11=y
