defconfigs: refresh configs

--- a/config/defconfigs/base-omap4-pandaboard.conf
+++ b/config/defconfigs/base-omap4-pandaboard.conf
@@ -2,7 +2,7 @@
 # Automatically generated file; DO NOT EDIT.
 # OpenBricks Configuration
 #
-CONFIG_KERNELVERSION="devel-20120402-r14088"
+CONFIG_KERNELVERSION="devel-20120324-r14064"
 CONFIG_MODULES=y
 CONFIG_FLAVOUR_base=y
 # CONFIG_FLAVOUR_geexbox is not set
@@ -250,10 +250,10 @@ CONFIG_OPT_TELNET_SERVER=y
 #
 # firmware
 #
-# CONFIG_PKG_dvbsky-dvb-firmware is not set
-# CONFIG_PKG_nouveau-firmware is not set
-# CONFIG_PKG_tevii-dvb-firmware is not set
-# CONFIG_PKG_ux500-firmware is not set
+# CONFIG_PKG_firmware-dvb-dvbsky-S9xx is not set
+# CONFIG_PKG_firmware-dvb-tevii is not set
+# CONFIG_PKG_firmware-graphics-nouveau is not set
+# CONFIG_PKG_firmware-ux500 is not set
 
 #
 # fonts
@@ -373,6 +373,7 @@ CONFIG_PKG_libcap=y
 # CONFIG_PKG_libcroco is not set
 # CONFIG_PKG_libdaemon is not set
 # CONFIG_PKG_libdce is not set
+# CONFIG_PKG_libdri2 is not set
 # CONFIG_PKG_libdvbpsi is not set
 # CONFIG_PKG_libdvdnav is not set
 # CONFIG_PKG_libdvdread is not set
@@ -388,6 +389,7 @@ CONFIG_PKG_libffi=y
 # CONFIG_PKG_libiconv is not set
 # CONFIG_PKG_libid3tag is not set
 # CONFIG_PKG_libiec61883 is not set
+# CONFIG_PKG_liblockdev is not set
 # CONFIG_PKG_libmad is not set
 # CONFIG_PKG_libmicrohttpd is not set
 # CONFIG_PKG_libmms is not set
@@ -497,6 +499,7 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_powerdebug is not set
 # CONFIG_PKG_powertop is not set
 # CONFIG_PKG_pvr is not set
+# CONFIG_PKG_rsync is not set
 # CONFIG_PKG_uci is not set
 # CONFIG_PKG_webrtc-audio-processing is not set
 
@@ -712,6 +715,7 @@ CONFIG_PKG_iptables=y
 # python
 #
 # CONFIG_PKG_Python is not set
+# CONFIG_PKG_cryptopy is not set
 # CONFIG_PKG_dbus-python is not set
 # CONFIG_PKG_imdbpy is not set
 # CONFIG_PKG_kaa-base is not set
@@ -775,6 +779,7 @@ CONFIG_PKG_eglibc-network=y
 # CONFIG_PKG_gcc-final is not set
 # CONFIG_PKG_i18n-keymaps is not set
 # CONFIG_PKG_i18n-locales is not set
+# CONFIG_PKG_kbd is not set
 CONFIG_PKG_kmod=y
 CONFIG_PKG_linux=y
 # CONFIG_OPT_linux_alsa is not set
@@ -800,9 +805,11 @@ CONFIG_OPT_linux_usb=y
 # CONFIG_OPT_linux_v4l is not set
 # CONFIG_OPT_linux_wifi is not set
 # CONFIG_PKG_llvm is not set
+# CONFIG_PKG_module-init-tools is not set
 # CONFIG_PKG_pciutils is not set
 # CONFIG_PKG_polkit is not set
 # CONFIG_PKG_ralink-8070-3070-3370-5372-usb is not set
+# CONFIG_PKG_snowball-init is not set
 CONFIG_PKG_systemd=y
 # CONFIG_OPT_systemd_devtools is not set
 CONFIG_OPT_SYSTEMD=y
@@ -846,9 +853,11 @@ CONFIG_PKG_usbutils=y
 # CONFIG_PKG_vdpauinfo is not set
 # CONFIG_PKG_wget is not set
 # CONFIG_PKG_wscan is not set
+# CONFIG_PKG_xbmc-addon-bluecop is not set
 # CONFIG_PKG_xbmc-addon-geexbox-network is not set
 # CONFIG_PKG_xbmc-addon-geexbox-updater is not set
 # CONFIG_PKG_xdotool is not set
+# CONFIG_PKG_xvattr is not set
 
 #
 # x11
@@ -904,6 +913,7 @@ CONFIG_PKG_usbutils=y
 # CONFIG_PKG_xf86-video-mga is not set
 # CONFIG_PKG_xf86-video-nouveau is not set
 # CONFIG_PKG_xf86-video-nv is not set
+# CONFIG_PKG_xf86-video-omap is not set
 # CONFIG_PKG_xf86-video-omapfb is not set
 # CONFIG_PKG_xf86-video-r128 is not set
 # CONFIG_PKG_xf86-video-v4l2 is not set
