--- a/config/defconfigs/geexbox-xbmc-i386-generic.conf
+++ b/config/defconfigs/geexbox-xbmc-i386-generic.conf
@@ -2,7 +2,7 @@
 # Automatically generated file; DO NOT EDIT.
 # OpenBricks Configuration
 #
-CONFIG_KERNELVERSION="devel-20120524-r14339"
+CONFIG_KERNELVERSION="devel-20120324-r14064"
 CONFIG_MODULES=y
 # CONFIG_FLAVOUR_base is not set
 CONFIG_FLAVOUR_geexbox=y
@@ -502,6 +502,7 @@ CONFIG_PKG_libgpg-error=y
 # CONFIG_PKG_libiconv is not set
 # CONFIG_PKG_libid3tag is not set
 # CONFIG_PKG_libiec61883 is not set
+# CONFIG_PKG_liblockdev is not set
 CONFIG_PKG_libmad=y
 CONFIG_PKG_libmicrohttpd=y
 CONFIG_PKG_libmms=y
@@ -744,7 +745,7 @@ CONFIG_OPT_xbmc_crystalhd=y
 CONFIG_OPT_xbmc_dvdcss=y
 CONFIG_OPT_xbmc_bluray=y
 CONFIG_OPT_xbmc_rtmp=y
-CONFIG_OPT_xbmc_nonfree=m
+CONFIG_OPT_xbmc_nonfree=y
 CONFIG_OPT_xbmc_externalffmpeg=y
 CONFIG_OPT_xbmc_pvr=y
 CONFIG_OPT_xbmc_addons=y
