--- a/config/defconfigs/geexbox-xbmc-x86_64-generic.conf
+++ b/config/defconfigs/geexbox-xbmc-x86_64-generic.conf
@@ -2,7 +2,7 @@
 # Automatically generated file; DO NOT EDIT.
 # OpenBricks Configuration
 #
-CONFIG_KERNELVERSION="devel-20120521-r14324"
+CONFIG_KERNELVERSION="devel-20120324-r14064"
 CONFIG_MODULES=y
 # CONFIG_FLAVOUR_base is not set
 CONFIG_FLAVOUR_geexbox=y
@@ -484,6 +484,7 @@ CONFIG_PKG_libgpg-error=y
 # CONFIG_PKG_libiconv is not set
 # CONFIG_PKG_libid3tag is not set
 # CONFIG_PKG_libiec61883 is not set
+# CONFIG_PKG_liblockdev is not set
 CONFIG_PKG_libmad=y
 CONFIG_PKG_libmicrohttpd=y
 CONFIG_PKG_libmms=y
@@ -846,6 +847,8 @@ CONFIG_PKG_wpa-supplicant=y
 # python
 #
 CONFIG_PKG_Python=y
+# CONFIG_OPT_Python_openssl is not set
+# CONFIG_PKG_cryptopy is not set
 # CONFIG_PKG_dbus-python is not set
 # CONFIG_PKG_imdbpy is not set
 # CONFIG_PKG_kaa-base is not set
@@ -998,6 +1001,7 @@ CONFIG_OPT_usbutils_devtools=y
 CONFIG_PKG_vdpauinfo=y
 # CONFIG_PKG_wget is not set
 CONFIG_PKG_wscan=y
+# CONFIG_PKG_xbmc-addon-bluecop is not set
 CONFIG_PKG_xbmc-addon-geexbox-network=y
 CONFIG_PKG_xbmc-addon-geexbox-updater=y
 # CONFIG_PKG_xdotool is not set
