--- a/config/defconfigs/base-x86_64-generic.conf
+++ b/config/defconfigs/base-x86_64-generic.conf
@@ -2,7 +2,7 @@
 # Automatically generated file; DO NOT EDIT.
 # OpenBricks Configuration
 #
-CONFIG_KERNELVERSION="devel-20120402-r14088"
+CONFIG_KERNELVERSION="devel-20120324-r14064"
 CONFIG_MODULES=y
 CONFIG_FLAVOUR_base=y
 # CONFIG_FLAVOUR_geexbox is not set
@@ -217,6 +217,7 @@ CONFIG_PKG_debug=y
 # CONFIG_PKG_dietsplash is not set
 # CONFIG_PKG_efibootmgr is not set
 CONFIG_PKG_grub=y
+# CONFIG_PKG_hdparm is not set
 # CONFIG_PKG_installator is not set
 # CONFIG_PKG_ndiswrapper-tool is not set
 # CONFIG_PKG_nvram-wakeup is not set
@@ -239,12 +240,14 @@ CONFIG_PKG_cryptodev=y
 # CONFIG_PKG_lirc is not set
 # CONFIG_PKG_ndiswrapper is not set
 # CONFIG_PKG_s2-liplianin is not set
+# CONFIG_PKG_tbs-drivers is not set
 # CONFIG_PKG_tibtfm-wl1271 is not set
 
 #
 # filesystem
 #
-# CONFIG_PKG_LVM is not set
+CONFIG_PKG_LVM=y
+CONFIG_OPT_LVM_devtools=y
 # CONFIG_PKG_aufs2-utils is not set
 # CONFIG_PKG_curlftpfs is not set
 CONFIG_PKG_e2fsprogs=y
@@ -261,39 +264,65 @@ CONFIG_PKG_parted=y
 #
 # firmware
 #
-# CONFIG_PKG_acx-firmware is not set
-# CONFIG_PKG_atmel-firmware is not set
-# CONFIG_PKG_b43-firmware is not set
-# CONFIG_PKG_b43-lpphy-firmware is not set
-# CONFIG_PKG_b43legacy-firmware is not set
-# CONFIG_PKG_bluez-firmware is not set
-# CONFIG_PKG_brcm80211-firmware is not set
-# CONFIG_PKG_carl9170-firmware is not set
-# CONFIG_PKG_dvbsky-dvb-firmware is not set
-# CONFIG_PKG_extra-firmwares-nonfree is not set
-# CONFIG_PKG_ipw2100-firmware is not set
-# CONFIG_PKG_ipw2200-firmware is not set
-# CONFIG_PKG_iwlwifi-100-ucode is not set
-# CONFIG_PKG_iwlwifi-1000-ucode is not set
-# CONFIG_PKG_iwlwifi-3945-ucode is not set
-# CONFIG_PKG_iwlwifi-4965-ucode is not set
-# CONFIG_PKG_iwlwifi-5000-ucode is not set
-# CONFIG_PKG_iwlwifi-5150-ucode is not set
-# CONFIG_PKG_iwlwifi-6000-ucode is not set
-# CONFIG_PKG_iwlwifi-6005-ucode is not set
-# CONFIG_PKG_iwlwifi-6030-ucode is not set
-# CONFIG_PKG_iwlwifi-6050-ucode is not set
-# CONFIG_PKG_libertas-firmware is not set
-# CONFIG_PKG_nouveau-firmware is not set
-# CONFIG_PKG_radeon-firmware is not set
-# CONFIG_PKG_ralink-firmware is not set
-# CONFIG_PKG_realtek-firmware is not set
-# CONFIG_PKG_tevii-dvb-firmware is not set
-# CONFIG_PKG_ti-connectivity-firmware is not set
-# CONFIG_PKG_tibtfm-wl1271-firmware is not set
-# CONFIG_PKG_ux500-firmware is not set
-# CONFIG_PKG_zd1201-firmware is not set
-# CONFIG_PKG_zd1211-firmware is not set
+# CONFIG_PKG_firmware-bluetooth-bluez is not set
+# CONFIG_PKG_firmware-dvb-af9015 is not set
+# CONFIG_PKG_firmware-dvb-avertv-a800 is not set
+# CONFIG_PKG_firmware-dvb-cx24116 is not set
+# CONFIG_PKG_firmware-dvb-cxusb-bluebird is not set
+# CONFIG_PKG_firmware-dvb-dib0700 is not set
+# CONFIG_PKG_firmware-dvb-dibusb-mb is not set
+# CONFIG_PKG_firmware-dvb-dibusb-mc is not set
+# CONFIG_PKG_firmware-dvb-dvbsky-S9xx is not set
+# CONFIG_PKG_firmware-dvb-nxt200x is not set
+# CONFIG_PKG_firmware-dvb-or51132 is not set
+# CONFIG_PKG_firmware-dvb-or51211 is not set
+# CONFIG_PKG_firmware-dvb-sp8870 is not set
+# CONFIG_PKG_firmware-dvb-sp887x is not set
+# CONFIG_PKG_firmware-dvb-tda10045 is not set
+# CONFIG_PKG_firmware-dvb-tda10046 is not set
+# CONFIG_PKG_firmware-dvb-tda10071 is not set
+# CONFIG_PKG_firmware-dvb-tevii is not set
+# CONFIG_PKG_firmware-dvb-ttpci is not set
+# CONFIG_PKG_firmware-dvb-ttusb is not set
+# CONFIG_PKG_firmware-dvb-tvwalkert is not set
+# CONFIG_PKG_firmware-dvb-umt010 is not set
+# CONFIG_PKG_firmware-dvb-vp702x is not set
+# CONFIG_PKG_firmware-dvb-vp7045 is not set
+# CONFIG_PKG_firmware-dvb-wt200u is not set
+# CONFIG_PKG_firmware-dvb-wt220u is not set
+# CONFIG_PKG_firmware-dvb-xc3028 is not set
+# CONFIG_PKG_firmware-graphics-nouveau is not set
+# CONFIG_PKG_firmware-graphics-radeon is not set
+# CONFIG_PKG_firmware-nic-wifi-realtek is not set
+# CONFIG_PKG_firmware-ux500 is not set
+# CONFIG_PKG_firmware-wifi-acx100 is not set
+# CONFIG_PKG_firmware-wifi-acx100usb is not set
+# CONFIG_PKG_firmware-wifi-acx111usb is not set
+# CONFIG_PKG_firmware-wifi-acx11x is not set
+# CONFIG_PKG_firmware-wifi-atmel is not set
+# CONFIG_PKG_firmware-wifi-b43 is not set
+# CONFIG_PKG_firmware-wifi-b43-lpphy is not set
+# CONFIG_PKG_firmware-wifi-b43legacy is not set
+# CONFIG_PKG_firmware-wifi-brcm80211 is not set
+# CONFIG_PKG_firmware-wifi-carl9170 is not set
+# CONFIG_PKG_firmware-wifi-intel-an6200-un6300 is not set
+# CONFIG_PKG_firmware-wifi-intel-an6205 is not set
+# CONFIG_PKG_firmware-wifi-intel-an6230-wn1030-wn130 is not set
+# CONFIG_PKG_firmware-wifi-intel-pw2100 is not set
+# CONFIG_PKG_firmware-wifi-intel-pw2200 is not set
+# CONFIG_PKG_firmware-wifi-intel-pw3945 is not set
+# CONFIG_PKG_firmware-wifi-intel-wl4965 is not set
+# CONFIG_PKG_firmware-wifi-intel-wl5000 is not set
+# CONFIG_PKG_firmware-wifi-intel-wl5150 is not set
+# CONFIG_PKG_firmware-wifi-intel-wm6250-wm6150 is not set
+# CONFIG_PKG_firmware-wifi-intel-wn100 is not set
+# CONFIG_PKG_firmware-wifi-intel-wn1000 is not set
+# CONFIG_PKG_firmware-wifi-marvel-libertas is not set
+# CONFIG_PKG_firmware-wifi-prism54 is not set
+# CONFIG_PKG_firmware-wifi-ralink is not set
+# CONFIG_PKG_firmware-wifi-wilink12xx is not set
+# CONFIG_PKG_firmware-wifi-zd1201 is not set
+# CONFIG_PKG_firmware-wifi-zd1211-ar5007 is not set
 
 #
 # fonts
@@ -412,6 +441,7 @@ CONFIG_PKG_libcap=y
 # CONFIG_PKG_libcroco is not set
 # CONFIG_PKG_libdaemon is not set
 # CONFIG_PKG_libdce is not set
+# CONFIG_PKG_libdri2 is not set
 # CONFIG_PKG_libdvbpsi is not set
 # CONFIG_PKG_libdvdnav is not set
 # CONFIG_PKG_libdvdread is not set
@@ -427,6 +457,7 @@ CONFIG_PKG_libgpg-error=y
 # CONFIG_PKG_libiconv is not set
 # CONFIG_PKG_libid3tag is not set
 # CONFIG_PKG_libiec61883 is not set
+# CONFIG_PKG_liblockdev is not set
 # CONFIG_PKG_libmad is not set
 # CONFIG_PKG_libmicrohttpd is not set
 # CONFIG_PKG_libmms is not set
@@ -536,6 +567,7 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_powerdebug is not set
 # CONFIG_PKG_powertop is not set
 # CONFIG_PKG_pvr is not set
+# CONFIG_PKG_rsync is not set
 # CONFIG_PKG_uci is not set
 # CONFIG_PKG_webrtc-audio-processing is not set
 
@@ -575,7 +607,6 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_libvalhalla is not set
 # CONFIG_PKG_libvdpau is not set
 # CONFIG_PKG_livepause is not set
-# CONFIG_PKG_mali400 is not set
 # CONFIG_PKG_mex is not set
 # CONFIG_PKG_mythplugins is not set
 # CONFIG_PKG_myththemes is not set
@@ -747,6 +778,7 @@ CONFIG_PKG_wpa-supplicant=y
 # python
 #
 # CONFIG_PKG_Python is not set
+# CONFIG_PKG_cryptopy is not set
 # CONFIG_PKG_dbus-python is not set
 # CONFIG_PKG_imdbpy is not set
 # CONFIG_PKG_kaa-base is not set
@@ -810,6 +842,7 @@ CONFIG_PKG_eglibc-network=y
 # CONFIG_PKG_gcc-final is not set
 CONFIG_PKG_i18n-keymaps=y
 # CONFIG_PKG_i18n-locales is not set
+# CONFIG_PKG_kbd is not set
 CONFIG_PKG_kmod=y
 CONFIG_PKG_linux=y
 CONFIG_OPT_linux_alsa=y
@@ -846,6 +879,7 @@ CONFIG_OPT_linux_wifi=y
 # CONFIG_OPT_linux_unichrome is not set
 # CONFIG_OPT_linux_vmwgfx is not set
 # CONFIG_PKG_llvm is not set
+# CONFIG_PKG_module-init-tools is not set
 # CONFIG_PKG_pciutils is not set
 # CONFIG_PKG_polkit is not set
 # CONFIG_PKG_ralink-8070-3070-3370-5372-usb is not set
@@ -895,9 +929,11 @@ CONFIG_OPT_usbutils_devtools=y
 # CONFIG_PKG_vdpauinfo is not set
 # CONFIG_PKG_wget is not set
 # CONFIG_PKG_wscan is not set
+# CONFIG_PKG_xbmc-addon-bluecop is not set
 # CONFIG_PKG_xbmc-addon-geexbox-network is not set
 # CONFIG_PKG_xbmc-addon-geexbox-updater is not set
 # CONFIG_PKG_xdotool is not set
+# CONFIG_PKG_xvattr is not set
 
 #
 # x11
