--- a/config/defconfigs/geexbox-xbmc-omap4-pandaboard.conf
+++ b/config/defconfigs/geexbox-xbmc-omap4-pandaboard.conf
@@ -2,7 +2,7 @@
 # Automatically generated file; DO NOT EDIT.
 # OpenBricks Configuration
 #
-CONFIG_KERNELVERSION="devel-20120402-r14088"
+CONFIG_KERNELVERSION="devel-20120324-r14064"
 CONFIG_MODULES=y
 # CONFIG_FLAVOUR_base is not set
 CONFIG_FLAVOUR_geexbox=y
@@ -271,44 +271,71 @@ CONFIG_PKG_ntfs-3g=y
 #
 # firmware
 #
-# CONFIG_PKG_acx-firmware is not set
-# CONFIG_PKG_atmel-firmware is not set
-# CONFIG_PKG_b43-firmware is not set
-# CONFIG_PKG_b43-lpphy-firmware is not set
-# CONFIG_PKG_b43legacy-firmware is not set
-# CONFIG_PKG_bluez-firmware is not set
-# CONFIG_PKG_brcm80211-firmware is not set
-# CONFIG_PKG_carl9170-firmware is not set
-# CONFIG_PKG_dvbsky-dvb-firmware is not set
-# CONFIG_PKG_extra-firmwares-nonfree is not set
-# CONFIG_PKG_imx5-firmware is not set
-# CONFIG_PKG_imx6-firmware is not set
-# CONFIG_PKG_ipw2100-firmware is not set
-# CONFIG_PKG_ipw2200-firmware is not set
-# CONFIG_PKG_iwlwifi-100-ucode is not set
-# CONFIG_PKG_iwlwifi-1000-ucode is not set
-# CONFIG_PKG_iwlwifi-3945-ucode is not set
-# CONFIG_PKG_iwlwifi-4965-ucode is not set
-# CONFIG_PKG_iwlwifi-5000-ucode is not set
-# CONFIG_PKG_iwlwifi-5150-ucode is not set
-# CONFIG_PKG_iwlwifi-6000-ucode is not set
-# CONFIG_PKG_iwlwifi-6005-ucode is not set
-# CONFIG_PKG_iwlwifi-6030-ucode is not set
-# CONFIG_PKG_iwlwifi-6050-ucode is not set
-# CONFIG_PKG_libertas-firmware is not set
-# CONFIG_PKG_nouveau-firmware is not set
-# CONFIG_PKG_radeon-firmware is not set
-# CONFIG_PKG_ralink-firmware is not set
-# CONFIG_PKG_realtek-firmware is not set
-CONFIG_PKG_syslink-ipc-firmware=y
-CONFIG_OPT_syslinkipcfirmware_devtools=y
-CONFIG_PKG_syslink-mm-firmware=y
-# CONFIG_PKG_tevii-dvb-firmware is not set
-CONFIG_PKG_ti-connectivity-firmware=y
-# CONFIG_PKG_tibtfm-wl1271-firmware is not set
-# CONFIG_PKG_ux500-firmware is not set
-# CONFIG_PKG_zd1201-firmware is not set
-# CONFIG_PKG_zd1211-firmware is not set
+# CONFIG_PKG_firmware-arm-imx5 is not set
+# CONFIG_PKG_firmware-arm-imx6 is not set
+CONFIG_PKG_firmware-arm-syslink-ipc=y
+CONFIG_OPT_firmwarearmsyslinkipc_devtools=y
+CONFIG_PKG_firmware-arm-syslink-mm=y
+CONFIG_PKG_firmware-arm-wl1271=y
+CONFIG_PKG_firmware-bluetooth-bluez=y
+CONFIG_PKG_firmware-dvb-af9015=y
+CONFIG_PKG_firmware-dvb-avertv-a800=y
+CONFIG_PKG_firmware-dvb-cx24116=y
+CONFIG_PKG_firmware-dvb-cxusb-bluebird=y
+CONFIG_PKG_firmware-dvb-dib0700=y
+CONFIG_PKG_firmware-dvb-dibusb-mb=y
+CONFIG_PKG_firmware-dvb-dibusb-mc=y
+CONFIG_PKG_firmware-dvb-dvbsky-S9xx=y
+CONFIG_PKG_firmware-dvb-nxt200x=y
+CONFIG_PKG_firmware-dvb-or51132=y
+CONFIG_PKG_firmware-dvb-or51211=y
+CONFIG_PKG_firmware-dvb-sp8870=y
+CONFIG_PKG_firmware-dvb-sp887x=y
+CONFIG_PKG_firmware-dvb-tda10045=y
+CONFIG_PKG_firmware-dvb-tda10046=y
+CONFIG_PKG_firmware-dvb-tda10071=y
+CONFIG_PKG_firmware-dvb-tevii=y
+CONFIG_PKG_firmware-dvb-ttpci=y
+CONFIG_PKG_firmware-dvb-ttusb=y
+CONFIG_PKG_firmware-dvb-tvwalkert=y
+CONFIG_PKG_firmware-dvb-umt010=y
+CONFIG_PKG_firmware-dvb-vp702x=y
+CONFIG_PKG_firmware-dvb-vp7045=y
+CONFIG_PKG_firmware-dvb-wt200u=y
+CONFIG_PKG_firmware-dvb-wt220u=y
+CONFIG_PKG_firmware-dvb-xc3028=y
+# CONFIG_PKG_firmware-graphics-nouveau is not set
+# CONFIG_PKG_firmware-graphics-radeon is not set
+# CONFIG_PKG_firmware-nic-wifi-realtek is not set
+# CONFIG_PKG_firmware-ux500 is not set
+# CONFIG_PKG_firmware-wifi-acx100 is not set
+# CONFIG_PKG_firmware-wifi-acx100usb is not set
+# CONFIG_PKG_firmware-wifi-acx111usb is not set
+# CONFIG_PKG_firmware-wifi-acx11x is not set
+# CONFIG_PKG_firmware-wifi-atmel is not set
+# CONFIG_PKG_firmware-wifi-b43 is not set
+# CONFIG_PKG_firmware-wifi-b43-lpphy is not set
+# CONFIG_PKG_firmware-wifi-b43legacy is not set
+# CONFIG_PKG_firmware-wifi-brcm80211 is not set
+# CONFIG_PKG_firmware-wifi-carl9170 is not set
+# CONFIG_PKG_firmware-wifi-intel-an6200-un6300 is not set
+# CONFIG_PKG_firmware-wifi-intel-an6205 is not set
+# CONFIG_PKG_firmware-wifi-intel-an6230-wn1030-wn130 is not set
+# CONFIG_PKG_firmware-wifi-intel-pw2100 is not set
+# CONFIG_PKG_firmware-wifi-intel-pw2200 is not set
+# CONFIG_PKG_firmware-wifi-intel-pw3945 is not set
+# CONFIG_PKG_firmware-wifi-intel-wl4965 is not set
+# CONFIG_PKG_firmware-wifi-intel-wl5000 is not set
+# CONFIG_PKG_firmware-wifi-intel-wl5150 is not set
+# CONFIG_PKG_firmware-wifi-intel-wm6250-wm6150 is not set
+# CONFIG_PKG_firmware-wifi-intel-wn100 is not set
+# CONFIG_PKG_firmware-wifi-intel-wn1000 is not set
+# CONFIG_PKG_firmware-wifi-marvel-libertas is not set
+# CONFIG_PKG_firmware-wifi-prism54 is not set
+# CONFIG_PKG_firmware-wifi-ralink is not set
+CONFIG_PKG_firmware-wifi-wilink12xx=y
+# CONFIG_PKG_firmware-wifi-zd1201 is not set
+# CONFIG_PKG_firmware-wifi-zd1211-ar5007 is not set
 
 #
 # fonts
@@ -457,6 +484,7 @@ CONFIG_PKG_libgpg-error=y
 # CONFIG_PKG_libiconv is not set
 # CONFIG_PKG_libid3tag is not set
 # CONFIG_PKG_libiec61883 is not set
+# CONFIG_PKG_liblockdev is not set
 CONFIG_PKG_libmad=y
 CONFIG_PKG_libmicrohttpd=y
 CONFIG_PKG_libmms=y
@@ -579,6 +607,7 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_powerdebug is not set
 # CONFIG_PKG_powertop is not set
 # CONFIG_PKG_pvr is not set
+# CONFIG_PKG_rsync is not set
 # CONFIG_PKG_uci is not set
 # CONFIG_PKG_webrtc-audio-processing is not set
 
@@ -834,6 +863,8 @@ CONFIG_PKG_wpa-supplicant=y
 # python
 #
 CONFIG_PKG_Python=y
+CONFIG_OPT_Python_openssl=y
+CONFIG_PKG_cryptopy=y
 # CONFIG_PKG_dbus-python is not set
 # CONFIG_PKG_imdbpy is not set
 # CONFIG_PKG_kaa-base is not set
@@ -899,6 +930,7 @@ CONFIG_PKG_eglibc-network=y
 # CONFIG_PKG_gcc-final is not set
 CONFIG_PKG_i18n-keymaps=y
 CONFIG_PKG_i18n-locales=y
+# CONFIG_PKG_kbd is not set
 CONFIG_PKG_kmod=y
 CONFIG_PKG_linux=y
 CONFIG_OPT_linux_alsa=y
@@ -928,6 +960,7 @@ CONFIG_OPT_linux_wifi=y
 # CONFIG_PKG_pciutils is not set
 # CONFIG_PKG_polkit is not set
 # CONFIG_PKG_ralink-8070-3070-3370-5372-usb is not set
+# CONFIG_PKG_snowball-init is not set
 CONFIG_PKG_systemd=y
 CONFIG_OPT_systemd_devtools=y
 CONFIG_OPT_SYSTEMD=y
@@ -973,9 +1006,11 @@ CONFIG_OPT_usbutils_devtools=y
 # CONFIG_PKG_vdpauinfo is not set
 # CONFIG_PKG_wget is not set
 # CONFIG_PKG_wscan is not set
+CONFIG_PKG_xbmc-addon-bluecop=y
 CONFIG_PKG_xbmc-addon-geexbox-network=y
 CONFIG_PKG_xbmc-addon-geexbox-updater=y
 # CONFIG_PKG_xdotool is not set
+# CONFIG_PKG_xvattr is not set
 
 #
 # x11
