tntnet: upgrade to 2.1

--- a/packages/tntnet/build
+++ b/packages/tntnet/build
@@ -16,13 +16,16 @@ cp -PR ../framework/common/tnt framework/common
 cp -PR ../sdk/tools/common/tnt sdk/tools/common
 do_configure host \
             CPPFLAGS=$($ac_cv_path_CXXTOOLS_CONFIG --cxxflags) \
+            --disable-static \
+            --enable-shared \
             --with-server=no \
             --with-ssl=no \
             --with-epoll=no \
             --with-sendfile=yes \
             --with-cgi=no \
             --with-sdk=yes \
-            --with-demos=no
+            --with-demos=no \
+
 make
 make_install
 cd ..
@@ -35,6 +38,8 @@ mkdir -p framework/common sdk/tools/common etc
 cp -PR ../framework/common/tnt framework/common
 cp -PR ../sdk/tools/common/tnt sdk/tools/common
 do_configure target \
+            --disable-static \
+            --enable-shared \
             --with-server=no \
             --with-ssl=no \
             --with-epoll=no \
