pcre, cxxtools, tntnet: cleanup and harmonize files

--- a/packages/cxxtools/build
+++ b/packages/cxxtools/build
@@ -1,28 +1,25 @@
 #!/bin/sh
 
 . config/options
+get_meta $1
 
-require_cxx $1
+cd $BUILD/${PKG_NAME}-${PKG_VERSION}
 
-cd $BUILD/$1*
-
-mkdir -p objdir-host
-cd objdir-host
-# copy include dir, otherwise out-of-dir build fails
-cp -PR ../include .
+mkdir -p objdir-host && cd objdir-host
 do_configure host
+
 make
 make_install toolchain
+
 sed -i "s:\(['= ]\)/usr:\\1$ROOT/$TOOLCHAIN:g" .install/usr/bin/cxxtools-config
 mv .install/usr/bin/cxxtools-config .install/usr/bin/cxxtools-host-config
+
 cd ..
 
-mkdir -p objdir-target
-cd objdir-target
-# copy include dir, otherwise out-of-dir build fails
-cp -PR ../include .
+mkdir -p objdir-target && cd objdir-target
 do_configure target
+
 make
 make_install
+
 sed -i "s:\(['= ]\)/usr:\\1$LIB_PREFIX:g" .install/usr/bin/cxxtools-config
-cd ..
