--- a/packages/pcre/build
+++ b/packages/pcre/build
@@ -1,12 +1,14 @@
 #!/bin/sh
 
 . config/options
+get_meta $1
 
-cd $BUILD/$1*
+cd $BUILD/${PKG_NAME}-${PKG_VERSION}
+
 do_configure \
   --enable-utf8 \
   --enable-unicode-properties \
-  --with-gnu-ld \
+  --with-gnu-ld
 
 make
 make_install
