--- a/packages/busybox-init/config/busybox.conf
+++ b/packages/busybox-init/config/busybox.conf
@@ -54,7 +54,7 @@ CONFIG_FEATURE_HAVE_RPC=y
 #
 # Build Options
 #
-CONFIG_STATIC=y
+# CONFIG_STATIC is not set
 # CONFIG_PIE is not set
 # CONFIG_NOMMU is not set
 # CONFIG_BUILD_LIBBUSYBOX is not set
