vdr-epgsearch: upgrade to 1.0.1+ebce5aab

--- a/packages/vdr-epgsearch/build
+++ b/packages/vdr-epgsearch/build
@@ -1,12 +1,11 @@
 #!/bin/sh
 
 . config/options
-
-$SCRIPTS/build vdr
+get_meta $1
 
 VDR_DIR=`basename $BUILD/vdr-1*`
 
-cd $BUILD/$1*
+cd $BUILD/${PKG_NAME}-${PKG_VERSION}
 make \
   VDRDIR="../$VDR_DIR" \
   LIBDIR="." \
