defconfigs: disable xbmc externalffmpeg for geexbox-xbmc-i386-generic

--- a/config/defconfigs/geexbox-xbmc-i386-generic.conf
+++ b/config/defconfigs/geexbox-xbmc-i386-generic.conf
@@ -655,9 +655,7 @@ CONFIG_OPT_pvr_vdr=y
 # CONFIG_PKG_gst-plugins-good is not set
 # CONFIG_PKG_gst-vaapi is not set
 # CONFIG_PKG_gstreamer is not set
-CONFIG_PKG_libav=y
-CONFIG_OPT_libav_vdpau=y
-CONFIG_OPT_libav_vaapi=y
+# CONFIG_PKG_libav is not set
 CONFIG_PKG_libbluray=y
 CONFIG_OPT_libbluray_aacs=y
 # CONFIG_PKG_libdvdcss is not set
@@ -746,7 +744,7 @@ CONFIG_OPT_xbmc_dvdcss=y
 CONFIG_OPT_xbmc_bluray=y
 CONFIG_OPT_xbmc_rtmp=y
 CONFIG_OPT_xbmc_nonfree=y
-CONFIG_OPT_xbmc_externalffmpeg=y
+# CONFIG_OPT_xbmc_externalffmpeg is not set
 CONFIG_OPT_xbmc_pvr=y
 CONFIG_OPT_xbmc_addons=y
 CONFIG_OPT_xbmc_libcec=y
