--- a/packages/vdr-sc/build
+++ b/packages/vdr-sc/build
@@ -1,8 +1,7 @@
 #!/bin/sh
 
 . config/options
-
-$SCRIPTS/build vdr
+get_meta $1
 
 VDR_DIR=`basename $BUILD/vdr-1*`
 
@@ -10,11 +9,8 @@ CFLAGS="$CFLAGS -fPIC"
 CXXFLAGS="$CXXFLAGS -fPIC"
 LDFLAGS="$LDFLAGS -fPIC"
 
-# dont build parallel
-  MAKEFLAGS=-j1
-
-cd $BUILD/$1*
-make all \
+cd $BUILD/${PKG_NAME}-${PKG_VERSION}
+make \
   VDRDIR="../$VDR_DIR" \
   LIBDIR="." \
   LOCALEDIR="./locale"
