--- a/packages/vdr/build
+++ b/packages/vdr/build
@@ -1,22 +1,24 @@
 #!/bin/sh
 
 . config/options
+get_meta $1
 
 require_cxx $1
 
-$SCRIPTS/unpack linux
+#$SCRIPTS/unpack linux
 
-ACTIVE_EXTENSIONS="liemiext"
-VDR_PLUGINS="`echo "$ROOTFS_PACKAGES $OPK_PACKAGES" | tr ' ' '\n' | grep 'vdr-'`" || true
-for plugin in $VDR_PLUGINS; do
-  VDR_EXTENSIONS=
-  if [ -r $PACKAGES/$plugin/config/vdr ]; then
-    . $PACKAGES/$plugin/config/vdr
-    ACTIVE_EXTENSIONS="$ACTIVE_EXTENSIONS $VDR_EXTENSIONS"
-  fi
-done
+#ACTIVE_EXTENSIONS="liemiext"
+#VDR_PLUGINS="`echo "$ROOTFS_PACKAGES $OPK_PACKAGES" | tr ' ' '\n' | grep 'vdr-'`" || true
+#for plugin in $VDR_PLUGINS; do
+#  VDR_EXTENSIONS=
+#  if [ -r $PACKAGES/$plugin/config/vdr ]; then
+#    . $PACKAGES/$plugin/config/vdr
+#    ACTIVE_EXTENSIONS="$ACTIVE_EXTENSIONS $VDR_EXTENSIONS"
+#  fi
+#done
 
-cd $BUILD/$1*
+cd $BUILD/${PKG_NAME}-${PKG_VERSION}
+
 cat > Make.config <<EOF
 PREFIX=/usr
 PLUGINLIBDIR=/usr/lib/vdr
@@ -25,14 +27,15 @@ CONFDIR=/etc/vdr
 LOCDIR=/usr/share/locale
 LIBS += -lintl
 EOF
-[ "$TARGET_LIBC" = "uclibc" ] && echo 'LIBS += -liconv' >>Make.config
 
-for ext in $ACTIVE_EXTENSIONS; do
-  EXTNAME=`echo $ext | tr a-z A-Z`
-  echo "$EXTNAME=1" >> Make.config
-  VDR_DEFINES="$VDR_DEFINES -DUSE_$EXTNAME"
-done
-[ -n "$VDR_DEFINES" ] && echo "DEFINES += $VDR_DEFINES" >> Make.config
+[ "$TARGET_LIBC" = "uclibc" ] && echo 'LIBS += -liconv' >> Make.config
+
+#for ext in $ACTIVE_EXTENSIONS; do
+#  EXTNAME=`echo $ext | tr a-z A-Z`
+#  echo "$EXTNAME=1" >> Make.config
+#  VDR_DEFINES="$VDR_DEFINES -DUSE_$EXTNAME"
+#done
+#[ -n "$VDR_DEFINES" ] && echo "DEFINES += $VDR_DEFINES" >> Make.config
 
 make && make include-dir # latter one to build extra plugins
 make_install
