--- a/packages/vdr-dynamite/build
+++ b/packages/vdr-dynamite/build
@@ -1,13 +1,12 @@
 #!/bin/sh
 
 . config/options
-
-. config/options
-
-$SCRIPTS/build vdr
+get_meta $1
 
 VDR_DIR=`basename $BUILD/vdr-1*`
 
-cd $BUILD/$1*
-make VDRDIR="../$VDR_DIR" LIBDIR="." LOCALEDIR="./locale"
-
+cd $BUILD/${PKG_NAME}-${PKG_VERSION}
+make \
+  VDRDIR="../$VDR_DIR" \
+  LIBDIR="." \
+  LOCALEDIR="./locale"
