kconfig-frontends: fix qt frontend rebuild issues

--- a/packages/kconfig-frontends/build
+++ b/packages/kconfig-frontends/build
@@ -12,6 +12,8 @@ UNSET="${UNSET} CPPFLAGS CFLAGS CXXFLAGS LDFLAGS"
 UNSET="${UNSET} PKG_CONFIG PKG_CONFIG_PATH PKG_PROG_PKG_CONFIG PKG_CONFIG_LIBDIR"
 # misc
 UNSET="${UNSET} FREETYPE_CONFIG M4 LIBTOOL LIBTOOLIZE"
+# qt
+UNSET="${UNSET} MOC RCC UIC QMAKE QT_MKSPECS QMAKESPEC QT_PATH_INCLUDES QT_PATH_LIBS"
 
 # prepare clean environment for configure
 unset ${UNSET}
