vdr : fix about DVB API

--- a/packages/vdr/build
+++ b/packages/vdr/build
@@ -26,6 +26,7 @@ VIDEODIR=/video
 CONFDIR=/etc/vdr
 LOCDIR=/usr/share/locale
 LIBS += -lintl
+DVBDIR=$(kernel_path)
 EOF
 
 [ "$TARGET_LIBC" = "uclibc" ] && echo 'LIBS += -liconv' >> Make.config
