vdr : use kernel-headers ...

--- a/packages/vdr/build
+++ b/packages/vdr/build
@@ -26,7 +26,7 @@ VIDEODIR=/video
 CONFDIR=/etc/vdr
 LOCDIR=/usr/share/locale
 LIBS += -lintl
-DVBDIR=$(kernel_path)
+DVBDIR=$SYSROOT_PREFIX/usr
 EOF
 
 [ "$TARGET_LIBC" = "uclibc" ] && echo 'LIBS += -liconv' >> Make.config
