tinyxml: rework package, add patches from Debian

--- a/packages/tinyxml/build
+++ b/packages/tinyxml/build
@@ -1,22 +1,10 @@
 #!/bin/sh
 
 . config/options
+
 get_meta $1
 
 cd $BUILD/${PKG_NAME}-${PKG_VERSION}
 
-#make
-
-  for i in tinyxml.cpp tinystr.cpp tinyxmlerror.cpp tinyxmlparser.cpp; do
-    $CXX $CXXFLAGS -fPIC -o $i.o -c $i
-  done
-  $CXX $LDFLAGS -shared -o lib${PKG_NAME}.so.${PKG_VERSION} -Wl,-soname,lib${PKG_NAME}.so.0 *.cpp.o
-
-  ln -sf lib${PKG_NAME}.so.${PKG_VERSION} lib${PKG_NAME}.so.0
-  ln -sf lib${PKG_NAME}.so.0 lib${PKG_NAME}.so
-
-mkdir -p .install/usr/lib
-
-  cp -P lib${PKG_NAME}.so* .install/usr/lib
-mkdir -p .install/usr/include
-  cp -P ${PKG_NAME}.h .install/usr/include
+make
+make_install
