major rework of network handling - new network-backend package, for proper support of multiple implementations   of networking - spun out the udhcpc stuff from connman into a separate "udhcpc" backend - updated connman to 1.0 - dropped ntpd when using connman, added support for properly setting   timeservers in connman config, using the geexbox ntp pool by default - dropped resolv.conf generation when using connman, connman uses an internal   resolver so /etc/resolv.conf will always contain only 127.0.0.1, added   support for overriding the DNS servers from DHCP in connman - the list in DNS_SERVERS is now space separated for consistency with other   options. - add google dns as fallback nameservers (used if the local network dns is   not working) - don't rewrite /etc/network, just update the single values - rework telnetd handling, check for enable status in socket unit

--- a/packages/udhcpc/unit/ntpd.service
+++ b/packages/udhcpc/unit/ntpd.service
@@ -1,13 +1,12 @@
 [Unit]
 Description=Network Time Protocol
-After=network.target
+After=udhcpc.service
 
 [Service]
 ExecStartPre=/bin/sh -c 'while ! /bin/ping -c1 www.geexbox.org; do sleep 2; done'
-EnvironmentFile=/etc/ntpd.conf
-ExecStart=/usr/sbin/ntpd $NTP_OPTS
+ExecStart=/usr/lib/udhcpc/net-ntpd
 Type=forking
 Restart=always
 
 [Install]
-WantedBy=multi-user.target
+WantedBy=network.target
