--- a/packages/udhcpc/unit/udhcpc.service
+++ b/packages/udhcpc/unit/udhcpc.service
@@ -3,8 +3,8 @@ Description=Connection service (udhcpc)
 After=syslog.target
 
 [Service]
-ExecStart=/usr/sbin/net-udhcpc
+ExecStart=/usr/lib/udhcpc/net-ntpd
 RemainAfterExit=yes
 
 [Install]
-WantedBy=multi-user.target
+WantedBy=network.target
