--- a/packages/busybox/unit/telnetd@.service
+++ b/packages/busybox/unit/telnetd@.service
@@ -3,5 +3,5 @@ Description=Telnet Per-Connection Server
 After=syslog.target
 
 [Service]
-ExecStart=/usr/sbin/telnetd-check
+ExecStart=/usr/sbin/telnetd -i
 StandardInput=socket
