--- a/packages/connman/build
+++ b/packages/connman/build
@@ -23,25 +23,29 @@ do_configure \
             --disable-hh2serial-gps \
             --disable-ofono \
             --disable-openconnect \
-            --disable-portal \
-            --enable-loopback \
-            --disable-google \
-            --enable-meego=builtin \
+            --disable-openvpn \
+            --disable-vpnc \
+            --disable-l2tp \
+            --disable-pptp \
             --disable-iwmx \
             --disable-iospm \
-            --disable-ntpd \
-            --disable-polkit \
-            --enable-client \
             --enable-test \
+            --disable-tist \
+            --disable-nmcompat \
+            --disable-polkit \
+            --enable-loopback \
+            --enable-client \
             --disable-tools \
             --enable-datafiles \
 
 make
 make_install
 
-mkdir -p .install/usr/bin 
+mkdir -p .install/usr/bin
 cp -P client/cm .install/usr/bin
-cp -P test/* .install/usr/bin
+
+mkdir -p .install/etc/connman
+cp -P $ROOT/$PACKAGES/$1/config/main.conf .install/etc/connman
 
 systemctl_enable connman.service
 
