--- a/packages/tvheadend/unit/tvheadend.service
+++ b/packages/tvheadend/unit/tvheadend.service
@@ -3,7 +3,9 @@ Description=TV streaming server
 After=syslog.target
 
 [Service]
-ExecStart=/usr/sbin/runtvheadend
+EnvironmentFile=/etc/pvr.conf
+ExecStartPre=/usr/bin/test ${BACKEND} = tvheadend
+ExecStart=/usr/bin/tvheadend -c /etc/tvheadend -s
 Restart=always
 
 [Install]
