gcc-linaro: enable building an armhf toolchain

--- a/packages/gcc-final/build
+++ b/packages/gcc-final/build
@@ -15,6 +15,29 @@ else
   GOLD_CONFIG="--disable-gold"
 fi
 
+EXTRA_FLAGS=
+if [ "$ARM_HARDFLOAT_ABI" = yes ]; then
+  EXTRA_FLAGS="$EXTRA_FLAGS --with-float=hard"
+fi
+
+case "$FPU_OPTIMIZATIONS" in
+  vfp2)
+    EXTRA_FLAGS="$EXTRA_FLAGS --with-fpu=vfp"
+    ;;
+
+  vfp3)
+    EXTRA_FLAGS="$EXTRA_FLAGS --with-fpu=vfpv3"
+    ;;
+
+  vfp3-d16)
+    EXTRA_FLAGS="$EXTRA_FLAGS --with-fpu=vfpv3-d16"
+    ;;
+
+  neon)
+    EXTRA_FLAGS="$EXTRA_FLAGS --with-fpu=neon"
+    ;;
+esac
+
 cd $BUILD/gcc-${TOOLCHAIN_TYPE}-4*
 mkdir -p objdir-$1
 cd objdir-$1
@@ -46,7 +69,8 @@ cd objdir-$1
              --enable-long-long \
              --enable-threads=posix \
              $TLS_CONFIG \
-             --disable-nls
+             --disable-nls \
+             $EXTRA_FLAGS
 make
 make_install toolchain
 for i in `find .install/usr/$TARGET_NAME -name "*.la"`; do
