--- a/packages/gcc-core/build
+++ b/packages/gcc-core/build
@@ -12,6 +12,29 @@ else
   GOLD_CONFIG="--disable-gold"
 fi
 
+EXTRA_FLAGS=
+if [ "$ARM_HARDFLOAT_ABI" = yes ]; then
+  EXTRA_FLAGS="$EXTRA_FLAGS --with-float=hard"
+fi
+
+case "$FPU_OPTIMIZATIONS" in
+  vfp2)
+    EXTRA_FLAGS="$EXTRA_FLAGS --with-fpu=vfp"
+    ;;
+
+  vfp3)
+    EXTRA_FLAGS="$EXTRA_FLAGS --with-fpu=vfpv3"
+    ;;
+
+  vfp3-d16)
+    EXTRA_FLAGS="$EXTRA_FLAGS --with-fpu=vfpv3-d16"
+    ;;
+
+  neon)
+    EXTRA_FLAGS="$EXTRA_FLAGS --with-fpu=neon"
+    ;;
+esac
+
 cd $BUILD/gcc-${TOOLCHAIN_TYPE}-4*
 mkdir -p objdir-$1
 cd objdir-$1
@@ -43,7 +66,8 @@ cd objdir-$1
              --without-headers \
              --with-newlib \
              --disable-decimal-float \
-             --disable-nls
+             --disable-nls \
+             $EXTRA_FLAGS
 make all-gcc all-target-libgcc
 
 mkdir -p "$ROOT/$BUILD/$1/.install"
