riff, riff-loadercomm: bump to the latest git revision

--- a/config/platforms/arm/ux500/packages/riff-loadercomm/build
+++ b/config/platforms/arm/ux500/packages/riff-loadercomm/build
@@ -12,12 +12,10 @@ RIFF_ARCH=""
 make config
 
 sed -i "s: g++: ${HOST_CXX}:g" .config
-sed -i "s: gcc: ${HOST_CC}:g" lcmodule/.config
 
 make
 make install
 
 rm -rf .install
 mkdir -p .install/usr/lib
-cp -P build/liblcdriver${RIFF_ARCH}.so .install/usr/lib/liblcdriver.so
-cp -P build/liblcm${RIFF_ARCH}.so.1 .install/usr/lib/liblcm.so.1
+cp -P out/out_linux/liblcdriver${RIFF_ARCH}.so .install/usr/lib/liblcdriver.so
