--- a/config/platforms/arm/ux500/packages/riff/build
+++ b/config/platforms/arm/ux500/packages/riff/build
@@ -11,6 +11,7 @@ LOADERCOM_SRC=`ls -d ../riff-loadercomm-*/source`
 sed -i riff/riff.mk \
   -e "s:^CFLAGS=\(.*\)$:CFLAGS=\\1 -I../${LOADERCOM_SRC} -I${ROOT}/${TOOLCHAIN}/include/libusb-1.0/:"\
   -e "s:^LDFLAGS=\(.*\)$:LDFLAGS=\\1 -L${ROOT}/${TOOLCHAIN}/lib:" \
+  -e "s:-lcdal:-lcdal -lrt:"
 
 sed -i CDAL/CDAL.mk \
   -e "s:-I/usr:-I${ROOT}/${TOOLCHAIN}:"\
