--- a/config/platforms/i386/generic/linux.conf
+++ b/config/platforms/i386/generic/linux.conf
@@ -69,7 +69,7 @@ CONFIG_HAVE_KERNEL_LZO=y
 CONFIG_KERNEL_XZ=y
 # CONFIG_KERNEL_LZO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
-# CONFIG_SWAP is not set
+CONFIG_SWAP=y
 CONFIG_SYSVIPC=y
 CONFIG_SYSVIPC_SYSCTL=y
 CONFIG_POSIX_MQUEUE=y
