xbmc : bump version to pvr-20120602-gita9be5e5df

--- a/packages/xbmc/build
+++ b/packages/xbmc/build
@@ -43,6 +43,10 @@ xbmc_set_option $1 "gst"               "gstreamer"
 CFG_TEGRA="--disable-tegra"
 [ "$TARGET_PLATFORM" = tegra2 ] && CFG_TEGRA="--enable-tegra"
 
+if [ "$TARGET_PLATFORM" = omap4 ] ; then 
+  EXTRA_CONFIG="$EXTRA_CONFIG --enable-neon"
+fi
+
 export LIBS="$LIBS -lstdc++"
 export LIB_P=$LIB_PREFIX
 
