--- a/packages/xbmc/build
+++ b/packages/xbmc/build
@@ -38,14 +38,11 @@ xbmc_set_option $1 "afpclient"         "afpclient"
 xbmc_set_option $1 "airtunes"          "airtunes"
 xbmc_set_option $1 "screensavers"      "rsxs"
 xbmc_set_option $1 "gst"               "gstreamer"
+xbmc_set_option $1 "neon"              "neon"
 
 # check for nVidia ARM Tegra2 optimizations
 CFG_TEGRA="--disable-tegra"
 [ "$TARGET_PLATFORM" = tegra2 ] && CFG_TEGRA="--enable-tegra"
-
-if [ "$TARGET_PLATFORM" = omap4 ] ; then 
-  EXTRA_CONFIG="$EXTRA_CONFIG --enable-neon"
-fi
 
 export LIBS="$LIBS -lstdc++"
 export LIB_P=$LIB_PREFIX
