vdr-sc: re-add -j1 as make flag

--- a/packages/vdr-sc/build
+++ b/packages/vdr-sc/build
@@ -8,6 +8,7 @@ VDR_DIR=`basename $BUILD/vdr-1*`
 CFLAGS="$CFLAGS -fPIC"
 CXXFLAGS="$CXXFLAGS -fPIC"
 LDFLAGS="$LDFLAGS -fPIC"
+MAKEFLAGS=-j1
 
 cd $BUILD/${PKG_NAME}-${PKG_VERSION}
 make \
