--- a/packages/tntnet/build
+++ b/packages/tntnet/build
@@ -17,7 +17,8 @@ do_configure host \
             --with-demos=no \
             --with-epoll=yes \
             --with-ssl=no \
-            --with-stressjob=no
+            --with-stressjob=no \
+            --prefix=$ROOT/$TOOLCHAIN
 
 make
 make_install toolchain
