--- a/packages/vdr-live/build
+++ b/packages/vdr-live/build
@@ -5,4 +5,7 @@
 $SCRIPTS/build vdr
 
 cd $BUILD/$1*
+tntnet-config --libs
+pcre-config --libs-cpp
+export MALLOC_CHECK_=0
 make ECPPC=$ROOT/$TOOLCHAIN/bin/ecppc
