--- a/packages/tntnet/build
+++ b/packages/tntnet/build
@@ -17,8 +17,7 @@ do_configure host \
             --with-demos=no \
             --with-epoll=yes \
             --with-ssl=no \
-            --with-stressjob=no \
-            --prefix=$ROOT/$TOOLCHAIN
+            --with-stressjob=no
 
 make
 make_install toolchain
