--- a/config/defconfigs/geexbox-xbmc-x86_64-generic.conf
+++ b/config/defconfigs/geexbox-xbmc-x86_64-generic.conf
@@ -2,7 +2,7 @@
 # Automatically generated file; DO NOT EDIT.
 # OpenBricks Configuration
 #
-CONFIG_KERNELVERSION="devel-20120324-r14064"
+CONFIG_KERNELVERSION="devel-20120602-r14420"
 CONFIG_MODULES=y
 # CONFIG_FLAVOUR_base is not set
 CONFIG_FLAVOUR_geexbox=y
@@ -202,8 +202,9 @@ CONFIG_USE_devtools=y
 # Network
 #
 CONFIG_USE_network=y
-CONFIG_NM_CONNMAN=y
-# CONFIG_NM_NONE is not set
+CONFIG_NB_CONNMAN=y
+# CONFIG_NB_UDHCPC is not set
+# CONFIG_NB_NONE is not set
 # CONFIG_USE_bluetooth is not set
 CONFIG_USE_wifi=y
 CONFIG_START_SERVICES=y
@@ -215,7 +216,7 @@ CONFIG_OPT_FTP_SERVER=y
 # CONFIG_HTTP_SERVER is not set
 CONFIG_OPT_SAMBA=y
 # CONFIG_SAMBA_SERVER is not set
-# CONFIG_AUTOMOUNTER_SMB is not set
+CONFIG_AUTOMOUNTER_SMB=y
 CONFIG_AUTOMOUNTER_NFS=y
 # CONFIG_AUTOMOUNTER_9P is not set
 
@@ -586,6 +587,7 @@ CONFIG_PKG_talloc=y
 # CONFIG_PKG_telepathy-sofiasip is not set
 CONFIG_PKG_tiff=y
 # CONFIG_PKG_tiler is not set
+CONFIG_PKG_tinyxml=y
 # CONFIG_PKG_tntnet is not set
 # CONFIG_PKG_tslib is not set
 # CONFIG_PKG_twolame is not set
@@ -733,7 +735,7 @@ CONFIG_OPT_xbmc_libnfs=y
 CONFIG_OPT_xbmc_afpclient=y
 CONFIG_OPT_xbmc_airtunes=y
 CONFIG_OPT_xbmc_screensavers=y
-# CONFIG_OPT_xbmc_gst is not set
+# CONFIG_OPT_xbmc_neon is not set
 CONFIG_PKG_xbmc-addon-vdr=y
 # CONFIG_PKG_xine-bluray is not set
 # CONFIG_PKG_xine-lib is not set
@@ -745,25 +747,29 @@ CONFIG_PKG_xbmc-addon-vdr=y
 CONFIG_PKG_amionline=y
 # CONFIG_PKG_automounter-9p is not set
 CONFIG_PKG_automounter-nfs=y
-# CONFIG_PKG_automounter-smb is not set
+CONFIG_PKG_automounter-smb=y
 CONFIG_PKG_bftpd=y
 # CONFIG_PKG_bluez is not set
 CONFIG_PKG_connman=y
 CONFIG_OPT_connman_wifi=y
 # CONFIG_OPT_connman_bluetooth is not set
 # CONFIG_PKG_connman-tools is not set
-# CONFIG_PKG_dropbear is not set
+CONFIG_PKG_dropbear=m
+CONFIG_OPT_dropbear_dbclient=y
+CONFIG_OPT_dropbear_scp=y
 # CONFIG_PKG_gatling is not set
 # CONFIG_PKG_hostapd is not set
 CONFIG_PKG_iptables=y
 # CONFIG_PKG_iw is not set
 # CONFIG_PKG_mysql-client is not set
 # CONFIG_PKG_mysql-server is not set
+CONFIG_PKG_network-backend=y
 # CONFIG_PKG_olsrd is not set
 # CONFIG_PKG_openvpn is not set
 CONFIG_PKG_samba-client=y
 # CONFIG_PKG_samba-server is not set
 # CONFIG_PKG_tcpdump is not set
+# CONFIG_PKG_udhcpc is not set
 CONFIG_PKG_wireless-tools=y
 CONFIG_OPT_wirelesstools_devtools=y
 CONFIG_PKG_wpa-supplicant=y
@@ -847,8 +853,8 @@ CONFIG_PKG_wpa-supplicant=y
 # python
 #
 CONFIG_PKG_Python=y
-# CONFIG_OPT_Python_openssl is not set
-# CONFIG_PKG_cryptopy is not set
+CONFIG_OPT_Python_openssl=y
+CONFIG_PKG_cryptopy=y
 # CONFIG_PKG_dbus-python is not set
 # CONFIG_PKG_imdbpy is not set
 # CONFIG_PKG_kaa-base is not set
@@ -858,7 +864,7 @@ CONFIG_PKG_Python=y
 # CONFIG_PKG_kaa-svn is not set
 # CONFIG_PKG_mysql-python is not set
 # CONFIG_PKG_pygame is not set
-# CONFIG_PKG_python-beautifulsoup is not set
+CONFIG_PKG_python-beautifulsoup=y
 # CONFIG_PKG_python-decorator is not set
 # CONFIG_PKG_python-formencode is not set
 # CONFIG_PKG_python-gdata-client is not set
@@ -905,7 +911,7 @@ CONFIG_OPT_dbus_xorg=y
 CONFIG_PKG_eglibc=y
 # CONFIG_OPT_eglibc_devtools is not set
 # CONFIG_OPT_eglibc_ipv6 is not set
-CONFIG_PKG_eglibc-gconv-extra=m
+CONFIG_PKG_eglibc-gconv-extra=y
 CONFIG_PKG_eglibc-gconv-minimal=y
 # CONFIG_PKG_eglibc-gdb is not set
 CONFIG_PKG_eglibc-network=y
@@ -914,7 +920,7 @@ CONFIG_PKG_evtest=y
 # CONFIG_PKG_gcc-final is not set
 CONFIG_PKG_i18n-keymaps=y
 CONFIG_PKG_i18n-locales=y
-# CONFIG_PKG_kbd is not set
+CONFIG_PKG_kbd=y
 CONFIG_PKG_kmod=y
 CONFIG_PKG_linux=y
 CONFIG_OPT_linux_alsa=y
@@ -978,7 +984,7 @@ CONFIG_PKG_dialog=y
 # CONFIG_OPT_dialog_xdialog is not set
 CONFIG_PKG_dvb-apps=y
 # CONFIG_PKG_expedite is not set
-CONFIG_PKG_extra-fonts-nonfree=m
+CONFIG_PKG_extra-fonts-nonfree=y
 # CONFIG_PKG_gdb is not set
 # CONFIG_PKG_generator is not set
 # CONFIG_PKG_graphlcd-base is not set
@@ -1001,11 +1007,11 @@ CONFIG_OPT_usbutils_devtools=y
 CONFIG_PKG_vdpauinfo=y
 # CONFIG_PKG_wget is not set
 CONFIG_PKG_wscan=y
-# CONFIG_PKG_xbmc-addon-bluecop is not set
+CONFIG_PKG_xbmc-addon-bluecop=y
 CONFIG_PKG_xbmc-addon-geexbox-network=y
 CONFIG_PKG_xbmc-addon-geexbox-updater=y
 # CONFIG_PKG_xdotool is not set
-# CONFIG_PKG_xvattr is not set
+CONFIG_PKG_xvattr=m
 
 #
 # x11
@@ -1102,3 +1108,4 @@ CONFIG_OPT_TARGET_LIBC="eglibc"
 CONFIG_OPT_KEYMAP="qwerty"
 CONFIG_OPT_EGL_PROVIDER="mesa"
 CONFIG_OPT_GLES_PROVIDER="mesa"
+CONFIG_OPT_NETWORK_BACKEND="connman"
