vdr-live : bump version to 94a0a210a

--- a/packages/tntnet/build
+++ b/packages/tntnet/build
@@ -17,10 +17,13 @@ do_configure host \
             --with-demos=no \
             --with-epoll=yes \
             --with-ssl=no \
-            --with-stressjob=no
+            --with-stressjob=no \
+            --prefix=$ROOT/$TOOLCHAIN
 
 make
 make_install toolchain
+mkdir -p .install/usr
+mv .install/$ROOT/$TOOLCHAIN/* .install/usr
 
 cd ..
 
