--- a/packages/util-linux-ng/build
+++ b/packages/util-linux-ng/build
@@ -1,15 +1,16 @@
 #!/bin/sh
 
 . config/options
+get_meta $1
 
 export gt_cv_func_gnugettext1_libintl=no
 
 TLS_CONFIG="--enable-tls"
 [ $TARGET_LIBC = "uclibc" ] && TLS_CONFIG="--disable-tls"
 
-cd $BUILD/$1*
+cd $BUILD/${PKG_NAME}-${PKG_VERSION}
 
-mkdir -p objdir-host
+mkdir -p objdir-host 
 cd objdir-host
 setup_toolchain host
 do_configure host \
@@ -32,4 +33,3 @@ do_configure target \
 
 make
 make_install
-cd ..
