defconfigs: refresh geexbox-xbmc-i386-generic

--- a/config/defconfigs/geexbox-xbmc-i386-generic.conf
+++ b/config/defconfigs/geexbox-xbmc-i386-generic.conf
@@ -124,7 +124,7 @@ CONFIG_KEYMAP_QWERTY=y
 # CONFIG_KEYMAP_AZERTY is not set
 # CONFIG_KEYMAP_QWERTZ is not set
 CONFIG_LOCALE=y
-CONFIG_OPT_INCLUDED_LOCALES=""
+CONFIG_OPT_INCLUDED_LOCALES="en_US.UTF-8"
 CONFIG_OPT_DEFAULT_LOCALE="en_US.UTF-8"
 
 #
@@ -219,8 +219,9 @@ CONFIG_USE_devtools=y
 # Network
 #
 CONFIG_USE_network=y
-CONFIG_NM_CONNMAN=y
-# CONFIG_NM_NONE is not set
+CONFIG_NB_CONNMAN=y
+# CONFIG_NB_UDHCPC is not set
+# CONFIG_NB_NONE is not set
 # CONFIG_USE_bluetooth is not set
 CONFIG_USE_wifi=y
 CONFIG_START_SERVICES=y
@@ -355,7 +356,7 @@ CONFIG_PKG_firmware-wifi-intel-wn1000=y
 CONFIG_PKG_firmware-wifi-marvel-libertas=y
 CONFIG_PKG_firmware-wifi-prism54=y
 CONFIG_PKG_firmware-wifi-ralink=y
-CONFIG_PKG_firmware-wifi-wilink12xx=y
+# CONFIG_PKG_firmware-wifi-wilink12xx is not set
 CONFIG_PKG_firmware-wifi-zd1201=y
 CONFIG_PKG_firmware-wifi-zd1211-ar5007=y
 
@@ -604,6 +605,7 @@ CONFIG_PKG_talloc=y
 # CONFIG_PKG_telepathy-sofiasip is not set
 CONFIG_PKG_tiff=y
 # CONFIG_PKG_tiler is not set
+CONFIG_PKG_tinyxml=y
 # CONFIG_PKG_tntnet is not set
 # CONFIG_PKG_tslib is not set
 # CONFIG_PKG_twolame is not set
@@ -640,7 +642,9 @@ CONFIG_OPT_pvr_vdr=y
 # CONFIG_PKG_boxee is not set
 # CONFIG_PKG_dvbstreamer is not set
 # CONFIG_PKG_enna is not set
-# CONFIG_PKG_ffmpeg is not set
+CONFIG_PKG_ffmpeg=y
+CONFIG_OPT_ffmpeg_vdpau=y
+CONFIG_OPT_ffmpeg_vaapi=y
 # CONFIG_PKG_freevo is not set
 # CONFIG_PKG_freevo-svn is not set
 # CONFIG_PKG_gst-auto-launch is not set
@@ -655,9 +659,7 @@ CONFIG_OPT_pvr_vdr=y
 # CONFIG_PKG_gst-plugins-good is not set
 # CONFIG_PKG_gst-vaapi is not set
 # CONFIG_PKG_gstreamer is not set
-CONFIG_PKG_libav=y
-CONFIG_OPT_libav_vdpau=y
-CONFIG_OPT_libav_vaapi=y
+# CONFIG_PKG_libav is not set
 CONFIG_PKG_libbluray=y
 CONFIG_OPT_libbluray_aacs=y
 # CONFIG_PKG_libdvdcss is not set
@@ -754,7 +756,6 @@ CONFIG_OPT_xbmc_libnfs=y
 CONFIG_OPT_xbmc_afpclient=y
 CONFIG_OPT_xbmc_airtunes=y
 CONFIG_OPT_xbmc_screensavers=y
-# CONFIG_OPT_xbmc_gst is not set
 CONFIG_PKG_xbmc-addon-vdr=y
 # CONFIG_PKG_xine-bluray is not set
 # CONFIG_PKG_xine-lib is not set
@@ -782,11 +783,13 @@ CONFIG_PKG_iptables=y
 # CONFIG_PKG_iw is not set
 # CONFIG_PKG_mysql-client is not set
 # CONFIG_PKG_mysql-server is not set
+CONFIG_PKG_network-backend=y
 # CONFIG_PKG_olsrd is not set
 # CONFIG_PKG_openvpn is not set
 CONFIG_PKG_samba-client=y
 # CONFIG_PKG_samba-server is not set
 # CONFIG_PKG_tcpdump is not set
+# CONFIG_PKG_udhcpc is not set
 CONFIG_PKG_wireless-tools=y
 CONFIG_OPT_wirelesstools_devtools=y
 CONFIG_PKG_wpa-supplicant=y
@@ -1125,3 +1128,4 @@ CONFIG_OPT_TARGET_LIBC="eglibc"
 CONFIG_OPT_KEYMAP="qwerty"
 CONFIG_OPT_EGL_PROVIDER="mesa"
 CONFIG_OPT_GLES_PROVIDER="mesa"
+CONFIG_OPT_NETWORK_BACKEND="connman"
