snowball: update defconfig use thumb, remove external ffmpeg for xbmc

--- a/config/defconfigs/geexbox-xbmc-snowball-v5.conf
+++ b/config/defconfigs/geexbox-xbmc-snowball-v5.conf
@@ -2,7 +2,7 @@
 # Automatically generated file; DO NOT EDIT.
 # OpenBricks Configuration
 #
-CONFIG_KERNELVERSION="devel-20120603-r14434"
+CONFIG_KERNELVERSION="3.0"
 CONFIG_MODULES=y
 # CONFIG_FLAVOUR_base is not set
 CONFIG_FLAVOUR_geexbox=y
@@ -61,7 +61,7 @@ CONFIG_OPT_TARGET_CPU="cortex-a9"
 CONFIG_FPU_OPTIMIZATIONS_NEON=y
 # CONFIG_FPU_OPTIMIZATIONS_NONE is not set
 CONFIG_OPT_ARM_HARDFLOAT_ABI=y
-# CONFIG_OPT_THUMB is not set
+CONFIG_OPT_THUMB=y
 
 #
 # Toolchain settings
@@ -236,11 +236,11 @@ CONFIG_PKG_opkg=y
 #
 # drivers
 #
+# CONFIG_PKG_RTL8188CUS is not set
 # CONFIG_PKG_acx is not set
 # CONFIG_PKG_ar6k is not set
 CONFIG_PKG_cryptodev=y
 # CONFIG_PKG_cwiid is not set
-# CONFIG_PKG_dvb-usb-rtl2832u is not set
 # CONFIG_PKG_eventlircd is not set
 # CONFIG_PKG_lirc is not set
 # CONFIG_PKG_s2-liplianin is not set
@@ -370,7 +370,6 @@ CONFIG_PKG_SDL-image=y
 CONFIG_PKG_SDL-mixer=y
 # CONFIG_PKG_SDL-net is not set
 # CONFIG_PKG_SDL-ttf is not set
-# CONFIG_PKG_WebKitSDL is not set
 # CONFIG_PKG_a52dec is not set
 CONFIG_PKG_acl=y
 # CONFIG_PKG_afpfs-ng is not set
@@ -614,8 +613,7 @@ CONFIG_PKG_hdmiservice=y
 # CONFIG_PKG_MPlayer is not set
 # CONFIG_PKG_dvbstreamer is not set
 # CONFIG_PKG_enna is not set
-CONFIG_PKG_ffmpeg=y
-# CONFIG_OPT_ffmpeg_vaapi is not set
+# CONFIG_PKG_ffmpeg is not set
 # CONFIG_PKG_freevo is not set
 # CONFIG_PKG_freevo-svn is not set
 # CONFIG_PKG_gst-auto-launch is not set
@@ -724,7 +722,7 @@ CONFIG_OPT_xbmc_dvdcss=y
 CONFIG_OPT_xbmc_bluray=y
 CONFIG_OPT_xbmc_rtmp=y
 CONFIG_OPT_xbmc_nonfree=y
-CONFIG_OPT_xbmc_externalffmpeg=y
+# CONFIG_OPT_xbmc_externalffmpeg is not set
 # CONFIG_OPT_xbmc_pvr is not set
 CONFIG_OPT_xbmc_addons=y
 CONFIG_OPT_xbmc_libcec=y
